commit bilingual contents

--- a/docs/visual-basic/misc/bc40048.md
+++ b/docs/visual-basic/misc/bc40048.md
@@ -1,5 +1,5 @@
 ---
-title: 형식 매개 변수 '&lt;typeparametername&gt;' 바깥쪽 형식의 형식 매개 변수와 동일한 이름을 가진
+title: 형식 매개 변수 '<typeparametername>' 바깥쪽 형식의 형식 매개 변수와 동일한 이름을 가진
 ms.date: 07/20/2015
 f1_keywords:
 - vbc40048
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC40048
 ms.assetid: d5428b36-88d3-42c4-a096-cbc7bb9571f2
-ms.openlocfilehash: 11fa4e147236472887d75bb0df70cad7cbd63b18
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 8bc9c9280cfe425bfd55cfbfe9fa43c925a8a3f9
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54731961"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266700"
 ---
-# <a name="type-parameter-lttypeparameternamegt-has-the-same-name-as-a-type-parameter-of-an-enclosing-type"></a><span data-ttu-id="ccaa1-102">형식 매개 변수 '&lt;typeparametername&gt;' 바깥쪽 형식의 형식 매개 변수와 동일한 이름을 가진</span><span class="sxs-lookup"><span data-stu-id="ccaa1-102">Type parameter '&lt;typeparametername&gt;' has the same name as a type parameter of an enclosing type</span></span>
-<span data-ttu-id="ccaa1-103">제네릭 형식의 형식 매개 변수가 포함하는 제네릭 형식의 형식 매개 변수와 같은 이름으로 선언됩니다.</span><span class="sxs-lookup"><span data-stu-id="ccaa1-103">A type parameter of a generic type is declared with the same name as a type parameter of a containing generic type.</span></span>  
+# <a name="type-parameter-typeparametername-has-the-same-name-as-a-type-parameter-of-an-enclosing-type"></a><span data-ttu-id="5a419-102">형식 매개 변수 '\<typeparametername >' 바깥쪽 형식의 형식 매개 변수와 동일한 이름을 가진</span><span class="sxs-lookup"><span data-stu-id="5a419-102">Type parameter '\<typeparametername>' has the same name as a type parameter of an enclosing type</span></span>
+<span data-ttu-id="5a419-103">제네릭 형식의 형식 매개 변수가 포함하는 제네릭 형식의 형식 매개 변수와 같은 이름으로 선언됩니다.</span><span class="sxs-lookup"><span data-stu-id="5a419-103">A type parameter of a generic type is declared with the same name as a type parameter of a containing generic type.</span></span>  
   
- <span data-ttu-id="ccaa1-104">제네릭 형식의 형식 매개 변수 목록에서 각 형식 매개 변수 이름은 다음 이름과 모두 구별되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="ccaa1-104">In the type parameter list of a generic type, each type parameter must have a name distinct from all of the following names:</span></span>  
+ <span data-ttu-id="5a419-104">제네릭 형식의 형식 매개 변수 목록에서 각 형식 매개 변수 이름은 다음 이름과 모두 구별되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="5a419-104">In the type parameter list of a generic type, each type parameter must have a name distinct from all of the following names:</span></span>  
   
--   <span data-ttu-id="ccaa1-105">동일한 형식 매개 변수 목록에 있는 다른 모든 형식 매개 변수</span><span class="sxs-lookup"><span data-stu-id="ccaa1-105">Every other type parameter in the same type parameter list,</span></span>  
+-   <span data-ttu-id="5a419-105">동일한 형식 매개 변수 목록에 있는 다른 모든 형식 매개 변수</span><span class="sxs-lookup"><span data-stu-id="5a419-105">Every other type parameter in the same type parameter list,</span></span>  
   
--   <span data-ttu-id="ccaa1-106">포함하는 제네릭 형식의 형식 매개 변수 목록에 있는 모든 형식 매개 변수</span><span class="sxs-lookup"><span data-stu-id="ccaa1-106">Every type parameter in the type parameter list of any containing generic type, and</span></span>  
+-   <span data-ttu-id="5a419-106">포함하는 제네릭 형식의 형식 매개 변수 목록에 있는 모든 형식 매개 변수</span><span class="sxs-lookup"><span data-stu-id="5a419-106">Every type parameter in the type parameter list of any containing generic type, and</span></span>  
   
--   <span data-ttu-id="ccaa1-107">제네릭 형식 자체의 이름입니다.</span><span class="sxs-lookup"><span data-stu-id="ccaa1-107">The name of the generic type itself.</span></span>  
+-   <span data-ttu-id="5a419-107">제네릭 형식 자체의 이름입니다.</span><span class="sxs-lookup"><span data-stu-id="5a419-107">The name of the generic type itself.</span></span>  
   
- <span data-ttu-id="ccaa1-108">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="ccaa1-108">By default, this message is a warning.</span></span> <span data-ttu-id="ccaa1-109">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="ccaa1-109">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="5a419-108">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="5a419-108">By default, this message is a warning.</span></span> <span data-ttu-id="5a419-109">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="5a419-109">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="ccaa1-110">**오류 ID:** BC40048</span><span class="sxs-lookup"><span data-stu-id="ccaa1-110">**Error ID:** BC40048</span></span>  
+ <span data-ttu-id="5a419-110">**오류 ID:** BC40048</span><span class="sxs-lookup"><span data-stu-id="5a419-110">**Error ID:** BC40048</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ccaa1-111">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ccaa1-111">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5a419-111">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="5a419-111">To correct this error</span></span>  
   
--   <span data-ttu-id="ccaa1-112">이 도움말 페이지의 목록에 명시된 모든 이름과 구별되도록 형식 매개 변수의 이름을 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="ccaa1-112">Rename the type parameter to be distinct from every name cited in the list on this Help page.</span></span>  
+-   <span data-ttu-id="5a419-112">이 도움말 페이지의 목록에 명시된 모든 이름과 구별되도록 형식 매개 변수의 이름을 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="5a419-112">Rename the type parameter to be distinct from every name cited in the list on this Help page.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ccaa1-113">참고자료</span><span class="sxs-lookup"><span data-stu-id="ccaa1-113">See also</span></span>
-- [<span data-ttu-id="ccaa1-114">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="ccaa1-114">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="ccaa1-115">형식 목록</span><span class="sxs-lookup"><span data-stu-id="ccaa1-115">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+## <a name="see-also"></a><span data-ttu-id="5a419-113">참고자료</span><span class="sxs-lookup"><span data-stu-id="5a419-113">See also</span></span>
+- [<span data-ttu-id="5a419-114">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="5a419-114">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="5a419-115">형식 목록</span><span class="sxs-lookup"><span data-stu-id="5a419-115">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
