--- a/docs/visual-basic/misc/bc31394.md
+++ b/docs/visual-basic/misc/bc31394.md
@@ -1,5 +1,5 @@
 ---
-title: 형식의 식은 '&lt;typename&gt;' 'Object' 또는 'ValueType'로 변환할 수 없습니다.
+title: 형식의 식은 '<typename>' 'Object' 또는 'ValueType'로 변환할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - bc31394
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC31394
 ms.assetid: e6f76257-65bb-4954-99f9-90f282648354
-ms.openlocfilehash: e02f01f7088a873756a91f8de206c09d2c4cf80f
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 5a045d8f257e1849c7d45df002340a62344c5699
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54740517"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266556"
 ---
-# <a name="expression-of-type-lttypenamegt-cannot-be-converted-to-object-or-valuetype"></a><span data-ttu-id="0637e-102">형식의 식은 '&lt;typename&gt;' 'Object' 또는 'ValueType'로 변환할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="0637e-102">Expression of type '&lt;typename&gt;' cannot be converted to 'Object' or 'ValueType'</span></span>
-<span data-ttu-id="0637e-103">식이 CLR(공용 언어 런타임)에서 boxing될 수 없는 형식으로 계산합니다.</span><span class="sxs-lookup"><span data-stu-id="0637e-103">An expression evaluates to a type that cannot be boxed by the common language runtime (CLR).</span></span>  
+# <a name="expression-of-type-typename-cannot-be-converted-to-object-or-valuetype"></a><span data-ttu-id="94133-102">형식의 식은 '\<typename >' 'Object' 또는 'ValueType'로 변환할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="94133-102">Expression of type '\<typename>' cannot be converted to 'Object' or 'ValueType'</span></span>
+<span data-ttu-id="94133-103">식이 CLR(공용 언어 런타임)에서 boxing될 수 없는 형식으로 계산합니다.</span><span class="sxs-lookup"><span data-stu-id="94133-103">An expression evaluates to a type that cannot be boxed by the common language runtime (CLR).</span></span>  
   
- <span data-ttu-id="0637e-104">*Boxing* 은 형식을 경우에 따라 `Object` 또는 <xref:System.ValueType>으로 변환하는 데 필요한 처리를 참조합니다.</span><span class="sxs-lookup"><span data-stu-id="0637e-104">*Boxing* refers to the processing necessary to convert a type to `Object` or, on occasion, to <xref:System.ValueType>.</span></span> <span data-ttu-id="0637e-105">공용 언어 런타임에서 특정 형식(예: <xref:System.ArgIterator> 및 <xref:System.TypedReference>)을 boxing할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="0637e-105">The common language runtime cannot box certain types, for example <xref:System.ArgIterator> and <xref:System.TypedReference>.</span></span>  
+ <span data-ttu-id="94133-104">*Boxing* 은 형식을 경우에 따라 `Object` 또는 <xref:System.ValueType>으로 변환하는 데 필요한 처리를 참조합니다.</span><span class="sxs-lookup"><span data-stu-id="94133-104">*Boxing* refers to the processing necessary to convert a type to `Object` or, on occasion, to <xref:System.ValueType>.</span></span> <span data-ttu-id="94133-105">공용 언어 런타임에서 특정 형식(예: <xref:System.ArgIterator> 및 <xref:System.TypedReference>)을 boxing할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="94133-105">The common language runtime cannot box certain types, for example <xref:System.ArgIterator> and <xref:System.TypedReference>.</span></span>  
   
- <span data-ttu-id="0637e-106">사용 하지 않은 경우 `CType` 또는 `CObj` 이 식이 포함 된 문에서 Visual Basic이이 오류를 발생 시키는 암시적인 변환을 시도 했습니다.</span><span class="sxs-lookup"><span data-stu-id="0637e-106">If you have not used `CType` or `CObj` in the statement containing this expression, Visual Basic has attempted an implicit conversion that causes this error.</span></span>  
+ <span data-ttu-id="94133-106">사용 하지 않은 경우 `CType` 또는 `CObj` 이 식이 포함 된 문에서 Visual Basic이이 오류를 발생 시키는 암시적인 변환을 시도 했습니다.</span><span class="sxs-lookup"><span data-stu-id="94133-106">If you have not used `CType` or `CObj` in the statement containing this expression, Visual Basic has attempted an implicit conversion that causes this error.</span></span>  
   
- <span data-ttu-id="0637e-107">**오류 ID:** BC31394</span><span class="sxs-lookup"><span data-stu-id="0637e-107">**Error ID:** BC31394</span></span>  
+ <span data-ttu-id="94133-107">**오류 ID:** BC31394</span><span class="sxs-lookup"><span data-stu-id="94133-107">**Error ID:** BC31394</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0637e-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="0637e-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="94133-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="94133-108">To correct this error</span></span>  
   
-1.  <span data-ttu-id="0637e-109">제시된 형식으로 계산되는 식을 찾습니다.</span><span class="sxs-lookup"><span data-stu-id="0637e-109">Locate the expression that evaluates to the cited type.</span></span>  
+1.  <span data-ttu-id="94133-109">제시된 형식으로 계산되는 식을 찾습니다.</span><span class="sxs-lookup"><span data-stu-id="94133-109">Locate the expression that evaluates to the cited type.</span></span>  
   
-2.  <span data-ttu-id="0637e-110">제시된 형식을 boxing하려는 문의 일부를 찾습니다.</span><span class="sxs-lookup"><span data-stu-id="0637e-110">Locate the part of your statement that attempts to box the cited type.</span></span>  
+2.  <span data-ttu-id="94133-110">제시된 형식을 boxing하려는 문의 일부를 찾습니다.</span><span class="sxs-lookup"><span data-stu-id="94133-110">Locate the part of your statement that attempts to box the cited type.</span></span>  
   
-3.  <span data-ttu-id="0637e-111">Boxing 변환을 방지하려면 문을 다시 작성합니다.</span><span class="sxs-lookup"><span data-stu-id="0637e-111">Rewrite the statement to avoid the boxing conversion.</span></span>  
+3.  <span data-ttu-id="94133-111">Boxing 변환을 방지하려면 문을 다시 작성합니다.</span><span class="sxs-lookup"><span data-stu-id="94133-111">Rewrite the statement to avoid the boxing conversion.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0637e-112">참고자료</span><span class="sxs-lookup"><span data-stu-id="0637e-112">See also</span></span>
-- [<span data-ttu-id="0637e-113">암시적 변환과 명시적 변환</span><span class="sxs-lookup"><span data-stu-id="0637e-113">Implicit and Explicit Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
+## <a name="see-also"></a><span data-ttu-id="94133-112">참고자료</span><span class="sxs-lookup"><span data-stu-id="94133-112">See also</span></span>
+- [<span data-ttu-id="94133-113">암시적 변환과 명시적 변환</span><span class="sxs-lookup"><span data-stu-id="94133-113">Implicit and Explicit Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
