commit bilingual contents

--- a/docs/visual-basic/misc/bc31074.md
+++ b/docs/visual-basic/misc/bc31074.md
@@ -1,5 +1,5 @@
 ---
-title: 대리자 생성자 형식에 대 한 '&lt;typename&gt;' 필요한 대리자의 구현을 찾을 수 없습니다
+title: 형식에 대 한 대리 생성자 '<typename>' 필요한 대리자의 구현을 찾을 수 없습니다
 ms.date: 07/20/2015
 f1_keywords:
 - bc31074
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31074
 ms.assetid: d23311f4-e918-4306-b4f5-77be96a7b5b8
-ms.openlocfilehash: 566dc8d5d5f7acb1fbe62867f5b2e36a7bea8f5c
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 24ecd98805e38336fb46c87860226f93093cbe92
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53769703"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55271839"
 ---
-# <a name="delegate-constructor-for-type-lttypenamegt-necessary-for-the-implementation-of-delegates-cannot-be-found"></a><span data-ttu-id="5ee96-102">대리자 생성자 형식에 대 한 '&lt;typename&gt;' 필요한 대리자의 구현을 찾을 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="5ee96-102">Delegate constructor for type '&lt;typename&gt;', necessary for the implementation of delegates, cannot be found</span></span>
-<span data-ttu-id="5ee96-103">형식을 포함하는 어셈블리가 손상되었거나 잘못되었을 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="5ee96-103">The assembly containing the type may be damaged, or not valid.</span></span>  
+# <a name="delegate-constructor-for-type-typename-necessary-for-the-implementation-of-delegates-cannot-be-found"></a><span data-ttu-id="9d389-102">형식에 대 한 대리 생성자 '\<typename >' 대리자의 구현을 찾을 수 없습니다 하는 데 필요한</span><span class="sxs-lookup"><span data-stu-id="9d389-102">Delegate constructor for type '\<typename>', necessary for the implementation of delegates, cannot be found</span></span>
+<span data-ttu-id="9d389-103">형식을 포함하는 어셈블리가 손상되었거나 잘못되었을 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="9d389-103">The assembly containing the type may be damaged, or not valid.</span></span>  
   
- <span data-ttu-id="5ee96-104">**오류 ID:** BC31074</span><span class="sxs-lookup"><span data-stu-id="5ee96-104">**Error ID:** BC31074</span></span>  
+ <span data-ttu-id="9d389-104">**오류 ID:** BC31074</span><span class="sxs-lookup"><span data-stu-id="9d389-104">**Error ID:** BC31074</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5ee96-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="5ee96-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9d389-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="9d389-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="5ee96-106">이 형식을 포함하는 어셈블리가 유효한지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="5ee96-106">Verify that the assembly containing this type is valid.</span></span>  
+1.  <span data-ttu-id="9d389-106">이 형식을 포함하는 어셈블리가 유효한지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="9d389-106">Verify that the assembly containing this type is valid.</span></span>  
   
-2.  <span data-ttu-id="5ee96-107">프로그램을 다시 컴파일하여 오류가 다시 발생하는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="5ee96-107">Compile the program again to see if the error recurs.</span></span>  
+2.  <span data-ttu-id="9d389-107">프로그램을 다시 컴파일하여 오류가 다시 발생하는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="9d389-107">Compile the program again to see if the error recurs.</span></span>  
   
-3.  <span data-ttu-id="5ee96-108">오류가 계속 되 면 작업을 저장 하 고 Visual Studio를 다시 시작 합니다.</span><span class="sxs-lookup"><span data-stu-id="5ee96-108">If the error continues, save your work and restart Visual Studio.</span></span>  
+3.  <span data-ttu-id="9d389-108">오류가 계속 되 면 작업을 저장 하 고 Visual Studio를 다시 시작 합니다.</span><span class="sxs-lookup"><span data-stu-id="9d389-108">If the error continues, save your work and restart Visual Studio.</span></span>  
   
