--- a/docs/visual-basic/misc/bc36590.md
+++ b/docs/visual-basic/misc/bc36590.md
@@ -1,5 +1,5 @@
 ---
-title: 확장 메서드는 형식 인수가 너무 적습니다 '&lt;methodname&gt;'에 정의 된'&lt;typename&gt;'
+title: 확장 메서드는 형식 인수가 너무 적습니다 '<methodname>'에 정의 된'<typename>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36590
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC36590
 ms.assetid: 8a9dd2d3-d8af-4ef5-8427-eb6e83d16230
-ms.openlocfilehash: 0947db41829280d2651f1dc0333f8ea590373dea
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 5192099ca4fdc45a670e5338a33326e8c5baa896
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54606022"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266587"
 ---
-# <a name="too-few-type-arguments-to-extension-method-ltmethodnamegt-defined-in-lttypenamegt"></a><span data-ttu-id="d22a1-102">확장 메서드는 형식 인수가 너무 적습니다 '&lt;methodname&gt;'에 정의 된'&lt;typename&gt;'</span><span class="sxs-lookup"><span data-stu-id="d22a1-102">Too few type arguments to extension method '&lt;methodname&gt;' defined in '&lt;typename&gt;'</span></span>
-<span data-ttu-id="d22a1-103">메서드 정의의 형식 매개 변수보다 적은 형식 인수로 제네릭 확장 메서드를 호출했습니다.</span><span class="sxs-lookup"><span data-stu-id="d22a1-103">A generic extension method has been invoked with fewer type arguments than there are type parameters in the method definition.</span></span>  
+# <a name="too-few-type-arguments-to-extension-method-methodname-defined-in-typename"></a><span data-ttu-id="fef95-102">확장 메서드는 형식 인수가 너무 적습니다 '\<methodname >'에 정의 된 '\<typename >'</span><span class="sxs-lookup"><span data-stu-id="fef95-102">Too few type arguments to extension method '\<methodname>' defined in '\<typename>'</span></span>
+<span data-ttu-id="fef95-103">메서드 정의의 형식 매개 변수보다 적은 형식 인수로 제네릭 확장 메서드를 호출했습니다.</span><span class="sxs-lookup"><span data-stu-id="fef95-103">A generic extension method has been invoked with fewer type arguments than there are type parameters in the method definition.</span></span>  
   
- <span data-ttu-id="d22a1-104">제네릭 메서드를 호출할 때 해당 메서드에서 정의한 각 형식 매개 변수에 대해 하나의 형식 인수를 제공해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="d22a1-104">When you invoke a generic method, you must supply one type argument for each type parameter defined by that method.</span></span>  
+ <span data-ttu-id="fef95-104">제네릭 메서드를 호출할 때 해당 메서드에서 정의한 각 형식 매개 변수에 대해 하나의 형식 인수를 제공해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="fef95-104">When you invoke a generic method, you must supply one type argument for each type parameter defined by that method.</span></span>  
   
- <span data-ttu-id="d22a1-105">**오류 ID:** BC36590</span><span class="sxs-lookup"><span data-stu-id="d22a1-105">**Error ID:** BC36590</span></span>  
+ <span data-ttu-id="fef95-105">**오류 ID:** BC36590</span><span class="sxs-lookup"><span data-stu-id="fef95-105">**Error ID:** BC36590</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d22a1-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d22a1-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fef95-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="fef95-106">To correct this error</span></span>  
   
--   <span data-ttu-id="d22a1-107">호출하는 확장 메서드에서 각 형식 매개 변수에 대해 하나씩 있도록 형식 인수 목록에 형식 인수를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="d22a1-107">Add type arguments to your type argument list so that there is one for each type parameter of the extension method that you are invoking.</span></span>  
+-   <span data-ttu-id="fef95-107">호출하는 확장 메서드에서 각 형식 매개 변수에 대해 하나씩 있도록 형식 인수 목록에 형식 인수를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="fef95-107">Add type arguments to your type argument list so that there is one for each type parameter of the extension method that you are invoking.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d22a1-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="d22a1-108">See also</span></span>
-- [<span data-ttu-id="d22a1-109">확장명 메서드</span><span class="sxs-lookup"><span data-stu-id="d22a1-109">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="d22a1-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="d22a1-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="d22a1-111">형식 목록</span><span class="sxs-lookup"><span data-stu-id="d22a1-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
-- [<span data-ttu-id="d22a1-112">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="d22a1-112">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+## <a name="see-also"></a><span data-ttu-id="fef95-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="fef95-108">See also</span></span>
+- [<span data-ttu-id="fef95-109">확장명 메서드</span><span class="sxs-lookup"><span data-stu-id="fef95-109">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="fef95-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="fef95-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="fef95-111">형식 목록</span><span class="sxs-lookup"><span data-stu-id="fef95-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="fef95-112">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="fef95-112">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
