--- a/docs/visual-basic/misc/bc30614.md
+++ b/docs/visual-basic/misc/bc30614.md
@@ -1,5 +1,5 @@
 ---
-title: "'MustOverride' 메서드 '&lt;methodname&gt;' 'MyClass'를 사용 하 여 호출할 수 없습니다."
+title: "'MustOverride' 메서드 '<methodname>' 'MyClass'를 사용 하 여 호출할 수 없습니다."
 ms.date: 07/20/2015
 f1_keywords:
 - bc30614
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30614
 ms.assetid: fc57af41-1552-46d1-9727-341f1835e661
-ms.openlocfilehash: 5a67fcca98dd8ccc0b70183ecf59f55ef740080a
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 1cd01d7e1229762252d807388a7a4c6e892f4628
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54563053"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266697"
 ---
-# <a name="mustoverride-method-ltmethodnamegt-cannot-be-called-with-myclass"></a><span data-ttu-id="2f9e9-102">'MustOverride' 메서드 '&lt;methodname&gt;' 'MyClass'를 사용 하 여 호출할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="2f9e9-102">'MustOverride' method '&lt;methodname&gt;' cannot be called with 'MyClass'</span></span>
-<span data-ttu-id="2f9e9-103">`MyClass` 는 `Me`와 일치하지만 이에 대한 모든 메서드를 호출하면 호출되는 메서드가 `NotOverridable`인 것으로 처리됩니다.</span><span class="sxs-lookup"><span data-stu-id="2f9e9-103">`MyClass` is equivalent to `Me`, but all method invocations on it are treated as if the method being invoked were `NotOverridable`.</span></span>  
+# <a name="mustoverride-method-methodname-cannot-be-called-with-myclass"></a><span data-ttu-id="b6ab1-102">'MustOverride' 메서드 '\<methodname >' 'MyClass'를 사용 하 여 호출할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b6ab1-102">'MustOverride' method '\<methodname>' cannot be called with 'MyClass'</span></span>
+<span data-ttu-id="b6ab1-103">`MyClass` 는 `Me`와 일치하지만 이에 대한 모든 메서드를 호출하면 호출되는 메서드가 `NotOverridable`인 것으로 처리됩니다.</span><span class="sxs-lookup"><span data-stu-id="b6ab1-103">`MyClass` is equivalent to `Me`, but all method invocations on it are treated as if the method being invoked were `NotOverridable`.</span></span>  
   
- <span data-ttu-id="2f9e9-104">**오류 ID:** BC30614</span><span class="sxs-lookup"><span data-stu-id="2f9e9-104">**Error ID:** BC30614</span></span>  
+ <span data-ttu-id="b6ab1-104">**오류 ID:** BC30614</span><span class="sxs-lookup"><span data-stu-id="b6ab1-104">**Error ID:** BC30614</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2f9e9-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="2f9e9-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b6ab1-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b6ab1-105">To correct this error</span></span>  
   
--   <span data-ttu-id="2f9e9-106">`MustOverride` 한정자를 제거하거나 기본 클래스에서 메서드를 선언하고 해당 클래스를 상속하고 재정의합니다.</span><span class="sxs-lookup"><span data-stu-id="2f9e9-106">Remove the `MustOverride` modifier, or declare the method in a base class and inherit and override that class.</span></span>  
+-   <span data-ttu-id="b6ab1-106">`MustOverride` 한정자를 제거하거나 기본 클래스에서 메서드를 선언하고 해당 클래스를 상속하고 재정의합니다.</span><span class="sxs-lookup"><span data-stu-id="b6ab1-106">Remove the `MustOverride` modifier, or declare the method in a base class and inherit and override that class.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2f9e9-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="2f9e9-107">See also</span></span>
-- [<span data-ttu-id="2f9e9-108">MustOverride</span><span class="sxs-lookup"><span data-stu-id="2f9e9-108">MustOverride</span></span>](../../visual-basic/language-reference/modifiers/mustoverride.md)
-- [<span data-ttu-id="2f9e9-109">MustInherit</span><span class="sxs-lookup"><span data-stu-id="2f9e9-109">MustInherit</span></span>](../../visual-basic/language-reference/modifiers/mustinherit.md)
-- [<span data-ttu-id="2f9e9-110">NotOverridable</span><span class="sxs-lookup"><span data-stu-id="2f9e9-110">NotOverridable</span></span>](../../visual-basic/language-reference/modifiers/notoverridable.md)
+## <a name="see-also"></a><span data-ttu-id="b6ab1-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="b6ab1-107">See also</span></span>
+- [<span data-ttu-id="b6ab1-108">MustOverride</span><span class="sxs-lookup"><span data-stu-id="b6ab1-108">MustOverride</span></span>](../../visual-basic/language-reference/modifiers/mustoverride.md)
+- [<span data-ttu-id="b6ab1-109">MustInherit</span><span class="sxs-lookup"><span data-stu-id="b6ab1-109">MustInherit</span></span>](../../visual-basic/language-reference/modifiers/mustinherit.md)
+- [<span data-ttu-id="b6ab1-110">NotOverridable</span><span class="sxs-lookup"><span data-stu-id="b6ab1-110">NotOverridable</span></span>](../../visual-basic/language-reference/modifiers/notoverridable.md)
