--- a/docs/visual-basic/misc/bc30750.md
+++ b/docs/visual-basic/misc/bc30750.md
@@ -1,5 +1,5 @@
 ---
-title: 정보 유형에 대 한 '&lt;typename&gt;' 런타임으로 로드 되지 않았습니다
+title: 형식에 대 한 정보 '<typename>' 런타임으로 로드 되지 않았습니다
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30750
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30750
 ms.assetid: b0f074f9-571d-48f8-b334-4fd34b61cd89
-ms.openlocfilehash: 69fe40e38e5bc3608efbb1dc24a8527f60336410
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 5aeabb965fdf686633982b5c4f228097e14e9085
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54708625"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55271930"
 ---
-# <a name="information-for-the-type-of-lttypenamegt-has-not-been-loaded-into-the-runtime"></a><span data-ttu-id="6cd9c-102">정보 유형에 대 한 '&lt;typename&gt;' 런타임으로 로드 되지 않았습니다</span><span class="sxs-lookup"><span data-stu-id="6cd9c-102">Information for the type of '&lt;typename&gt;' has not been loaded into the runtime</span></span>
-<span data-ttu-id="6cd9c-103">런타임에 의해 로드되지 않은 형식이 참조되었습니다.</span><span class="sxs-lookup"><span data-stu-id="6cd9c-103">A type was referenced that has not been loaded by the runtime.</span></span>  
+# <a name="information-for-the-type-of-typename-has-not-been-loaded-into-the-runtime"></a><span data-ttu-id="35b8d-102">형식에 대 한 정보 '\<typename >' 런타임으로 로드 되지 않았습니다</span><span class="sxs-lookup"><span data-stu-id="35b8d-102">Information for the type of '\<typename>' has not been loaded into the runtime</span></span>
+<span data-ttu-id="35b8d-103">런타임에 의해 로드되지 않은 형식이 참조되었습니다.</span><span class="sxs-lookup"><span data-stu-id="35b8d-103">A type was referenced that has not been loaded by the runtime.</span></span>  
   
- <span data-ttu-id="6cd9c-104">**오류 ID:** BC30750</span><span class="sxs-lookup"><span data-stu-id="6cd9c-104">**Error ID:** BC30750</span></span>  
+ <span data-ttu-id="35b8d-104">**오류 ID:** BC30750</span><span class="sxs-lookup"><span data-stu-id="35b8d-104">**Error ID:** BC30750</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6cd9c-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="6cd9c-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="35b8d-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="35b8d-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="6cd9c-106">현재 범위 내에서 형식이 정의되도록 코드를 재구성합니다.</span><span class="sxs-lookup"><span data-stu-id="6cd9c-106">Restructure your code so the type is defined within the current scope.</span></span>  
+1.  <span data-ttu-id="35b8d-106">현재 범위 내에서 형식이 정의되도록 코드를 재구성합니다.</span><span class="sxs-lookup"><span data-stu-id="35b8d-106">Restructure your code so the type is defined within the current scope.</span></span>  
   
-2.  <span data-ttu-id="6cd9c-107">멤버가 정의되고 멤버 이름을 올바르게 입력했는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="6cd9c-107">Verify that the member is defined and that you have spelled the member name correctly.</span></span>  
+2.  <span data-ttu-id="35b8d-107">멤버가 정의되고 멤버 이름을 올바르게 입력했는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="35b8d-107">Verify that the member is defined and that you have spelled the member name correctly.</span></span>  
   
-3.  <span data-ttu-id="6cd9c-108">모듈에 선언된 멤버 중 하나에 액세스해 봅니다.</span><span class="sxs-lookup"><span data-stu-id="6cd9c-108">Try accessing one of the members declared in the module.</span></span> <span data-ttu-id="6cd9c-109">선언된 모듈이 아직 로드되지 않아 디버깅 환경에서 멤버를 찾을 수 없는 경우도 있습니다.</span><span class="sxs-lookup"><span data-stu-id="6cd9c-109">In some cases, the debugging environment cannot locate members because the modules where they are declared are not loaded.</span></span>  
+3.  <span data-ttu-id="35b8d-108">모듈에 선언된 멤버 중 하나에 액세스해 봅니다.</span><span class="sxs-lookup"><span data-stu-id="35b8d-108">Try accessing one of the members declared in the module.</span></span> <span data-ttu-id="35b8d-109">선언된 모듈이 아직 로드되지 않아 디버깅 환경에서 멤버를 찾을 수 없는 경우도 있습니다.</span><span class="sxs-lookup"><span data-stu-id="35b8d-109">In some cases, the debugging environment cannot locate members because the modules where they are declared are not loaded.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6cd9c-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="6cd9c-110">See also</span></span>
-- [<span data-ttu-id="6cd9c-111">Visual Studio의 디버깅</span><span class="sxs-lookup"><span data-stu-id="6cd9c-111">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
+## <a name="see-also"></a><span data-ttu-id="35b8d-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="35b8d-110">See also</span></span>
+- [<span data-ttu-id="35b8d-111">Visual Studio의 디버깅</span><span class="sxs-lookup"><span data-stu-id="35b8d-111">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
