--- a/docs/visual-basic/misc/bc30951.md
+++ b/docs/visual-basic/misc/bc30951.md
@@ -1,5 +1,5 @@
 ---
-title: 메서드에 전달 하는 형식 인수의 개수가 잘못 되었습니다. '&lt;genericprocedurename&gt;'
+title: 메서드에 전달 하는 형식 인수의 개수가 잘못 되었습니다. '<genericprocedurename>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30951
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC30951
 ms.assetid: 84c2f0cb-5706-4b4e-967c-0ca35a20913c
-ms.openlocfilehash: 5dddbe8c1a0de119acab4fdd685c248c9d990d49
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 821dbd61e16f137a67d833b3b0addf3e43b8d672
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54667624"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266678"
 ---
-# <a name="wrong-number-of-type-arguments-passed-to-method-ltgenericprocedurenamegt"></a><span data-ttu-id="e2532-102">메서드에 전달 하는 형식 인수의 개수가 잘못 되었습니다. '&lt;genericprocedurename&gt;'</span><span class="sxs-lookup"><span data-stu-id="e2532-102">Wrong number of type arguments passed to method '&lt;genericprocedurename&gt;'</span></span>
-<span data-ttu-id="e2532-103">정의된 형식 매개 변수 수와 일치하지 않는 여러 형식 인수와 함께 제네릭 프로시저가 호출되었습니다.</span><span class="sxs-lookup"><span data-stu-id="e2532-103">A generic procedure is called with a number of type arguments that does not match the number of type parameters with which it is defined.</span></span>  
+# <a name="wrong-number-of-type-arguments-passed-to-method-genericprocedurename"></a><span data-ttu-id="31596-102">메서드에 전달 하는 형식 인수의 개수가 잘못 되었습니다. '\<genericprocedurename >'</span><span class="sxs-lookup"><span data-stu-id="31596-102">Wrong number of type arguments passed to method '\<genericprocedurename>'</span></span>
+<span data-ttu-id="31596-103">정의된 형식 매개 변수 수와 일치하지 않는 여러 형식 인수와 함께 제네릭 프로시저가 호출되었습니다.</span><span class="sxs-lookup"><span data-stu-id="31596-103">A generic procedure is called with a number of type arguments that does not match the number of type parameters with which it is defined.</span></span>  
   
- <span data-ttu-id="e2532-104">**오류 ID:** BC30951</span><span class="sxs-lookup"><span data-stu-id="e2532-104">**Error ID:** BC30951</span></span>  
+ <span data-ttu-id="31596-104">**오류 ID:** BC30951</span><span class="sxs-lookup"><span data-stu-id="31596-104">**Error ID:** BC30951</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e2532-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="e2532-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="31596-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="31596-105">To correct this error</span></span>  
   
--   <span data-ttu-id="e2532-106">제네릭 프로시저에 대해 정의된 모든 형식 매개 변수에 대한 형식 인수를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="e2532-106">Supply a type argument for every type parameter defined for the generic procedure.</span></span>  
+-   <span data-ttu-id="31596-106">제네릭 프로시저에 대해 정의된 모든 형식 매개 변수에 대한 형식 인수를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="31596-106">Supply a type argument for every type parameter defined for the generic procedure.</span></span>  
   
-     <span data-ttu-id="e2532-107">또는</span><span class="sxs-lookup"><span data-stu-id="e2532-107">-or-</span></span>  
+     <span data-ttu-id="31596-107">또는</span><span class="sxs-lookup"><span data-stu-id="31596-107">-or-</span></span>  
   
--   <span data-ttu-id="e2532-108">형식 인수 없이 제네릭 프로시저를 호출하고 컴파일러에서 형식 인수를 유추하도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="e2532-108">Call the generic procedure with no type arguments at all, and let the compiler attempt to infer the type arguments.</span></span>  
+-   <span data-ttu-id="31596-108">형식 인수 없이 제네릭 프로시저를 호출하고 컴파일러에서 형식 인수를 유추하도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="31596-108">Call the generic procedure with no type arguments at all, and let the compiler attempt to infer the type arguments.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e2532-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="e2532-109">See also</span></span>
-- [<span data-ttu-id="e2532-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="e2532-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="e2532-111">AddressOf 연산자</span><span class="sxs-lookup"><span data-stu-id="e2532-111">AddressOf Operator</span></span>](../../visual-basic/language-reference/operators/addressof-operator.md)
-- [<span data-ttu-id="e2532-112">형식 목록</span><span class="sxs-lookup"><span data-stu-id="e2532-112">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
-- [<span data-ttu-id="e2532-113">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="e2532-113">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+## <a name="see-also"></a><span data-ttu-id="31596-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="31596-109">See also</span></span>
+- [<span data-ttu-id="31596-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="31596-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="31596-111">AddressOf 연산자</span><span class="sxs-lookup"><span data-stu-id="31596-111">AddressOf Operator</span></span>](../../visual-basic/language-reference/operators/addressof-operator.md)
+- [<span data-ttu-id="31596-112">형식 목록</span><span class="sxs-lookup"><span data-stu-id="31596-112">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="31596-113">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="31596-113">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
