--- a/docs/visual-basic/misc/bc32006.md
+++ b/docs/visual-basic/misc/bc32006.md
@@ -1,5 +1,5 @@
 ---
-title: "'Char' 값을 변환할 수 없습니다. '&lt;typename&gt;'"
+title: "'Char' 값을 변환할 수 없습니다. '<typename>'"
 ms.date: 07/20/2015
 f1_keywords:
 - bc32006
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC32006
 ms.assetid: c033f65e-a315-47fc-be2e-ed371847a221
-ms.openlocfilehash: 3f06c0b92b5ff54950e73fe713822ad05734c99b
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 625212bd7825ec487391513f171c9dde1eb3918a
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54683166"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55269292"
 ---
-# <a name="char-values-cannot-be-converted-to-lttypenamegt"></a><span data-ttu-id="bb492-102">'Char' 값을 변환할 수 없습니다. '&lt;typename&gt;'</span><span class="sxs-lookup"><span data-stu-id="bb492-102">'Char' values cannot be converted to '&lt;typename&gt;'</span></span>
-<span data-ttu-id="bb492-103">'Char' 값을 변환할 수 없습니다. '\<typename >'입니다.</span><span class="sxs-lookup"><span data-stu-id="bb492-103">'Char' values cannot be converted to '\<typename>'.</span></span> <span data-ttu-id="bb492-104">Microsoft.VisualBasic.AscW를 사용하여 문자를 유니코드 값으로 해석하거나 Microsoft.VisualBasic.Val을 사용하여 문자를 숫자로 해석하세요.</span><span class="sxs-lookup"><span data-stu-id="bb492-104">Use Microsoft.VisualBasic.AscW to interpret a character as a Unicode value or Microsoft.VisualBasic.Val to interpret it as a digit.</span></span>  
+# <a name="char-values-cannot-be-converted-to-typename"></a><span data-ttu-id="dc714-102">'Char' 값을 변환할 수 없습니다. '\<typename >'</span><span class="sxs-lookup"><span data-stu-id="dc714-102">'Char' values cannot be converted to '\<typename>'</span></span>
+<span data-ttu-id="dc714-103">'Char' 값을 변환할 수 없습니다. '\<typename >'입니다.</span><span class="sxs-lookup"><span data-stu-id="dc714-103">'Char' values cannot be converted to '\<typename>'.</span></span> <span data-ttu-id="dc714-104">Microsoft.VisualBasic.AscW를 사용하여 문자를 유니코드 값으로 해석하거나 Microsoft.VisualBasic.Val을 사용하여 문자를 숫자로 해석하세요.</span><span class="sxs-lookup"><span data-stu-id="dc714-104">Use Microsoft.VisualBasic.AscW to interpret a character as a Unicode value or Microsoft.VisualBasic.Val to interpret it as a digit.</span></span>  
   
- <span data-ttu-id="bb492-105">식에서 `Char` 값을 `String` 또는 `Object`이외의 데이터 형식으로 변환하려고 합니다.</span><span class="sxs-lookup"><span data-stu-id="bb492-105">An expression attempts to convert a `Char` value to a data type other than `String` or `Object`.</span></span>  
+ <span data-ttu-id="dc714-105">식에서 `Char` 값을 `String` 또는 `Object`이외의 데이터 형식으로 변환하려고 합니다.</span><span class="sxs-lookup"><span data-stu-id="dc714-105">An expression attempts to convert a `Char` value to a data type other than `String` or `Object`.</span></span>  
   
- <span data-ttu-id="bb492-106">**오류 ID:** BC32006</span><span class="sxs-lookup"><span data-stu-id="bb492-106">**Error ID:** BC32006</span></span>  
+ <span data-ttu-id="dc714-106">**오류 ID:** BC32006</span><span class="sxs-lookup"><span data-stu-id="dc714-106">**Error ID:** BC32006</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="bb492-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="bb492-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dc714-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="dc714-107">To correct this error</span></span>  
   
--   <span data-ttu-id="bb492-108">`AscW` 함수를 사용하여 `Char` 값을 유니코드 문자 코드로 해석하거나 `Val` 함수를 사용하여 숫자로 해석합니다.</span><span class="sxs-lookup"><span data-stu-id="bb492-108">Use the `AscW` function to interpret a `Char` value as a Unicode character code, or the `Val` function to interpret it as a numeric digit.</span></span>  
+-   <span data-ttu-id="dc714-108">`AscW` 함수를 사용하여 `Char` 값을 유니코드 문자 코드로 해석하거나 `Val` 함수를 사용하여 숫자로 해석합니다.</span><span class="sxs-lookup"><span data-stu-id="dc714-108">Use the `AscW` function to interpret a `Char` value as a Unicode character code, or the `Val` function to interpret it as a numeric digit.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="bb492-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="bb492-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="dc714-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="dc714-109">See also</span></span>
 
 
-- [<span data-ttu-id="bb492-110">Char 데이터 형식</span><span class="sxs-lookup"><span data-stu-id="bb492-110">Char Data Type</span></span>](../../visual-basic/language-reference/data-types/char-data-type.md)
+- [<span data-ttu-id="dc714-110">Char 데이터 형식</span><span class="sxs-lookup"><span data-stu-id="dc714-110">Char Data Type</span></span>](../../visual-basic/language-reference/data-types/char-data-type.md)
