commit translated contents

--- a/docs/visual-basic/misc/bc30385.md
+++ b/docs/visual-basic/misc/bc30385.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;한정자&gt;'는 Delegate 선언에서 유효 하지 않은"
+title: "'<modifier>'는 Delegate 선언에서 유효 하지 않은"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30385
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30385
 ms.assetid: cacbcdc7-dca9-4a22-b3bf-7e264308c031
-ms.openlocfilehash: b655f72821a97dcf1d2d498013491e5bdba4c296
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 45ca38e1350e9a5b47755e1f2fb2dc12e995f7cc
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54515279"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55283215"
 ---
-# <a name="ltmodifiergt-is-not-valid-on-a-delegate-declaration"></a>'&lt;한정자&gt;'는 Delegate 선언에서 유효 하지 않은
+# <a name="modifier-is-not-valid-on-a-delegate-declaration"></a>'\<한정자 >'는 Delegate 선언에서 유효 하지 않은
 대리자 선언에서 `Shared`과 같은 한정자를 사용하려고 했습니다. 대리자는 개체 메서드 지정이 전달되는 생성자를 정의하여 다른 개체의 메서드를 호출하는 데 사용되는 개체를 위임합니다. 대리자 선언에서 한정자를 지정할 수 없습니다.  
   
  **오류 ID:** BC30385  
