--- a/docs/visual-basic/misc/bc31014.md
+++ b/docs/visual-basic/misc/bc31014.md
@@ -1,5 +1,5 @@
 ---
-title: "진입점을 찾을 수 없습니다. '&lt;이름을&gt;'에서 'DLL&lt;filename&gt;': &lt;오류&gt;"
+title: 진입점을 찾을 수 없습니다. '<name>'DLL' in에서<filename>'. <error>
 ms.date: 07/20/2015
 f1_keywords:
 - bc31014
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31014
 ms.assetid: 84400dc7-2f4f-496a-ae24-5c1d23d0e470
-ms.openlocfilehash: 336b7c52d1fbaf8f42ba137355cc6473c63dbbd9
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 456bb465f7e30ef7782675b8128cd4c228f2641a
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54715883"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55284208"
 ---
-# <a name="unable-to-find-entry-point-ltnamegt-in-dll-ltfilenamegt-lterrorgt"></a>진입점을 찾을 수 없습니다. '&lt;이름을&gt;'에서 'DLL&lt;filename&gt;': &lt;오류&gt;
+# <a name="unable-to-find-entry-point-name-in-dll-filename-error"></a>진입점을 찾을 수 없습니다. '\<이름 >' DLL에서 '\<파일 이름 >': \<오류 >
 지정된 DLL에서 프로시저 이름을 찾을 수 없습니다.  
   
  **오류 ID:** BC31014  
