--- a/docs/visual-basic/misc/bc31500.md
+++ b/docs/visual-basic/misc/bc31500.md
@@ -1,5 +1,5 @@
 ---
-title: "'Shared' 특성의 속성 '&lt;대상일&gt;'는 할당 대상일 수 없습니다"
+title: "'Shared' 특성의 속성 '<propertyfield>'는 할당 대상일 수 없습니다"
 ms.date: 07/20/2015
 f1_keywords:
 - bc31500
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31500
 ms.assetid: dffa2b07-9609-4aa3-ae58-c0804d8a05d6
-ms.openlocfilehash: e6d9587cd71c35baa785bb9e2a9a5449619b5c0f
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: e7ba4abaf7887d2726be9c109913fd29f72a0dbd
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54601157"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55284754"
 ---
-# <a name="shared-attribute-property-ltpropertyfieldgt-cannot-be-the-target-of-an-assignment"></a>'Shared' 특성의 속성 '&lt;대상일&gt;'는 할당 대상일 수 없습니다
+# <a name="shared-attribute-property-propertyfield-cannot-be-the-target-of-an-assignment"></a>'Shared' 특성의 속성 '\<대상일 >'는 할당 대상일 수 없습니다
 특성의 `ReadOnly` 또는 `Shared` 속성에 값을 할당하려고 했습니다.  
   
  **오류 ID:** BC31500  
