--- a/docs/visual-basic/misc/bc36557.md
+++ b/docs/visual-basic/misc/bc36557.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;membername&gt;'의 구성원이 아닌'&lt;contextname&gt;'; 현재 컨텍스트에 존재 하지 않습니다"
+title: "'<membername>'의 구성원이 아닌'<contextname>'; 현재 컨텍스트에 존재 하지 않습니다"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36557
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36557
 ms.assetid: d8671f1c-d545-44da-89b3-7d892e01e8be
-ms.openlocfilehash: 7e432becc4a940222723645caba8f632901392a1
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: f8002a4ec19fb277ebbe8309e9d73e23d2daf6e2
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54599727"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55283779"
 ---
-# <a name="ltmembernamegt-is-not-a-member-of-ltcontextnamegt-it-does-not-exist-in-the-current-context"></a>'&lt;membername&gt;'의 구성원이 아닌'&lt;contextname&gt;'; 현재 컨텍스트에 존재 하지 않습니다
+# <a name="membername-is-not-a-member-of-contextname-it-does-not-exist-in-the-current-context"></a>'\<membername >'의 구성원이 아닌 '\<contextname >'; 현재 컨텍스트에 존재 하지 않습니다
 무명 형식 선언에서 존재하지 않는 멤버 이름이 속성에 할당되었습니다. 다음 예제에서 무명 형식의 속성은 `.Prop1` 및 `.Prop2` 입니다. `.Prop3` 을 `.Prop2` 에 할당하려고 하면 오류가 발생합니다.  
   
 ```vb  
