--- a/docs/visual-basic/misc/bc42032.md
+++ b/docs/visual-basic/misc/bc42032.md
@@ -1,5 +1,5 @@
 ---
-title: 개체 연산자에 대해 사용 되는 형식의 피연산자가 '&lt;operatorsymbol&gt;'; 'IsNot' 연산자를 사용 하 여 개체 id를 테스트 하려면
+title: 개체 연산자에 대해 사용 되는 형식의 피연산자 '<operatorsymbol>'; 'IsNot' 연산자를 사용 하 여 개체 id를 테스트 하려면
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42032
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC42032
 ms.assetid: f43b163b-f8f6-489d-ba9e-df6398ccc553
-ms.openlocfilehash: c9731204229574ac170c481fa71f26ead5f1d374
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 53e4e4877e617700c472f801870456977cdebca7
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54580774"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55285261"
 ---
-# <a name="operands-of-type-object-used-for-operator-ltoperatorsymbolgt-use-the-isnot-operator-to-test-object-identity"></a>개체 연산자에 대해 사용 되는 형식의 피연산자가 '&lt;operatorsymbol&gt;'; 'IsNot' 연산자를 사용 하 여 개체 id를 테스트 하려면
+# <a name="operands-of-type-object-used-for-operator-operatorsymbol-use-the-isnot-operator-to-test-object-identity"></a>개체 연산자에 대해 사용 되는 형식의 피연산자 '\<operatorsymbol >'; 'IsNot' 연산자를 사용 하 여 개체 id를 테스트 하려면
 식은 `<>` 의 하나 혹은 두 피연산자로 [%%amp;lt;%%amp;gt;](../../visual-basic/language-reference/data-types/object-data-type.md)연산자를 사용합니다.  
   
  `Is` 또는 `IsNot` 연산자를 사용하여 두 개체 참조가 동일한 개체 인스턴스를 참조하는지 확인합니다. [Comparison Operators in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)에서 "개체 비교"를 참조하세요.  
