--- a/docs/visual-basic/misc/bc30268.md
+++ b/docs/visual-basic/misc/bc30268.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;declaration1&gt;'를 재정의할 수 없습니다'&lt;declaration2&gt;'로 선언 된 'Shared'"
+title: "'<declaration1>'를 재정의할 수 없습니다'<declaration2>'로 선언 된 'Shared'"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30268
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30268
 ms.assetid: d011fb26-6236-462e-9173-622f8bbeb536
-ms.openlocfilehash: 03abbbcebe43ea739bdaa14e3fc0709e5175b69a
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 08df58583876cc5656a5e968829d9ab88992f2b9
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54619904"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55283441"
 ---
-# <a name="ltdeclaration1gt-cannot-override-ltdeclaration2gt-because-it-is-declared-shared"></a>'&lt;declaration1&gt;'를 재정의할 수 없습니다'&lt;declaration2&gt;'로 선언 된 'Shared'
+# <a name="declaration1-cannot-override-declaration2-because-it-is-declared-shared"></a>'\<declaration1 >'를 재정의할 수 없습니다 '\<declaration2 >'로 선언 된 'Shared'
 프로시저나 속성 선언이 동일한 이름의 상속된 요소를 재정의하려고 하지만 상속된 요소가 `Shared`로 지정되었습니다. 공유 요소는 클래스 인스턴스와 연결되어 있지 않으므로 재정의할 수 없습니다.  
   
  **오류 ID:** BC30268  
