--- a/docs/visual-basic/misc/bc30934.md
+++ b/docs/visual-basic/misc/bc30934.md
@@ -1,5 +1,5 @@
 ---
-title: 변환에서 '&lt;type1&gt;'to'&lt;type2&gt;' 특성에 대 한 인수로 사용 된 상수 식에서 발생할 수 없습니다
+title: 변환에서 '<type1>'에'<type2>' 특성에 대 한 인수로 사용 된 상수 식에서 발생할 수 없습니다
 ms.date: 07/20/2015
 f1_keywords:
 - bc30934
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30934
 ms.assetid: 120e05f9-1d0e-4800-b05c-a8373e286b9b
-ms.openlocfilehash: 29706b5d7215c765ad3f1e6ae5be955ddedb91d6
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 58b67a383d677f682e03f3246be93af46a829b3c
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54747780"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55284130"
 ---
-# <a name="conversion-from-lttype1gt-to-lttype2gt-cannot-occur-in-a-constant-expression-used-as-an-argument-to-an-attribute"></a>변환에서 '&lt;type1&gt;'to'&lt;type2&gt;' 특성에 대 한 인수로 사용 된 상수 식에서 발생할 수 없습니다
+# <a name="conversion-from-type1-to-type2-cannot-occur-in-a-constant-expression-used-as-an-argument-to-an-attribute"></a>변환에서 '\<type1 >'에 '\<type2 >' 특성에 대 한 인수로 사용 된 상수 식에서 발생할 수 없습니다
 특성 인수에 사용 되는 식에서 해당 특성 매개 변수는 다른 데이터 형식으로 평가 하 고 Visual Basic 특성 인수에 대 한 필수 형식 변환을 허용 하지 않습니다.  
   
  특성은 해당 특성이 적용되는 요소에 대한 메타데이터를 제공하며, 컴파일러가 컴파일 시간에 모든 메타데이터를 생성할 수 있어야 합니다. 이러한 이유로 모든 특성은 컴파일 시간에 상수인 값을 사용해야 하므로 모든 특성 인수가 컴파일 시간 상수 값으로 계산되어야 합니다.  
