--- a/docs/visual-basic/misc/bc32118.md
+++ b/docs/visual-basic/misc/bc32118.md
@@ -1,5 +1,5 @@
 ---
-title: 액세스 가능한 '&lt;genericprocedurename&gt;'이 개수의 형식 인수를 허용 합니다.
+title: 액세스 가능한 '<genericprocedurename>'이 개수의 형식 인수를 허용 합니다.
 ms.date: 07/20/2015
 f1_keywords:
 - bc32118
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32118
 ms.assetid: 4ee942ba-0fa1-4ec1-9c2c-a0c0dc3f1b17
-ms.openlocfilehash: 8369eb54df84b76022d566210d876639f7178355
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: a077b67842e13c3f5237b2ea717d272582a3c9ce
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54549225"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55285222"
 ---
-# <a name="no-accessible-ltgenericprocedurenamegt-accepts-this-number-of-type-arguments"></a>액세스 가능한 '&lt;genericprocedurename&gt;'이 개수의 형식 인수를 허용 합니다.
+# <a name="no-accessible-genericprocedurename-accepts-this-number-of-type-arguments"></a>액세스 가능한 '\<genericprocedurename >'이 개수의 형식 인수를 허용 합니다.
 문에서 오버로드된 버전이 둘 이상 있는 제네릭 프로시저를 호출하지만 호출에서 제공된 형식 인수 개수와 동일한 개수의 형식 매개 변수를 정의하는 오버로드된 버전이 없습니다.  
   
  제네릭 버전이 하나뿐인 경우 형식 인수 없이 호출하며, 컴파일러에서 *형식 유추*를 시도할 수 있습니다. 자세한 내용은 [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)의 "형식 유추"를 참조하세요. 그러나 제네릭 버전이 여러 개인 경우 형식 인수를 제공하지 않으면 컴파일러에서 그중 하나를 선택할 수 없습니다. 형식 인수를 하나 제공한 경우 모든 형식 매개 변수에 대해 오버로드 버전에서 정의한 형식 인수를 제공해야 합니다.  
