--- a/docs/visual-basic/misc/bc33038.md
+++ b/docs/visual-basic/misc/bc33038.md
@@ -1,5 +1,5 @@
 ---
-title: 형식 '&lt;typename&gt;'연산자를 정의 해야 합니다'&lt;연산자&gt;' 'For' 문에서 사용할
+title: 형식 '<typename>'연산자를 정의 해야 합니다'<operator>' 'For' 문에서 사용할
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33038
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC33038
 ms.assetid: b1c9d87f-80f9-4c8c-8908-f8400b9fe4c5
-ms.openlocfilehash: f7e4ce2c26fb561ba180dadae123138737c82457
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 97a1171b435c30dd043b37bcce37dcf16cb6a23f
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54607490"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55285118"
 ---
-# <a name="type-lttypenamegt-must-define-operator-ltoperatorgt-to-be-used-in-a-for-statement"></a>형식 '&lt;typename&gt;'연산자를 정의 해야 합니다'&lt;연산자&gt;' 'For' 문에서 사용할
+# <a name="type-typename-must-define-operator-operator-to-be-used-in-a-for-statement"></a>형식 '\<typename >' 연산자를 정의 해야 합니다 '\<연산자 >'는 'For' 문에서 사용할
 `For` 루프에서 필요한 연산자를 지원하지 않는 유형의 카운터 변수를 지정합니다.  
   
  `For` 루프의 카운터 변수는 다음 연산자를 모두 지원하는 데이터 형식일 수 있습니다.  
