--- a/docs/visual-basic/misc/bc33041.md
+++ b/docs/visual-basic/misc/bc33041.md
@@ -1,5 +1,5 @@
 ---
-title: 연산자 '&lt;연산자&gt;' 'Integer' 형식의 두 번째 매개 변수가 있어야
+title: 연산자 '<operator>' 'Integer' 형식의 두 번째 매개 변수가 있어야
 ms.date: 07/20/2015
 f1_keywords:
 - BC33041
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC33041
 ms.assetid: 5cd56f6d-2f0f-49de-a8e6-59bdb57bdb1d
-ms.openlocfilehash: ace25f2753dc580998ba85a6f3fa9e1bdf175de1
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: e93b0d1898b01e28f82fb3a93d417f2d59d3b91f
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54739899"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55285209"
 ---
-# <a name="operator-ltoperatorgt-must-have-a-second-parameter-of-type-integer"></a>연산자 '&lt;연산자&gt;' 'Integer' 형식의 두 번째 매개 변수가 있어야
+# <a name="operator-operator-must-have-a-second-parameter-of-type-integer"></a>연산자 '\<연산자 >' 'Integer' 형식의 두 번째 매개 변수가 있어야
 비트 시프트 연산자가 `Integer`가 아닌 형식의 두 번째 매개 변수를 사용하여 선언되었습니다.  
   
  식에서 오른쪽 시프트(`>>`) 또는 왼쪽 시프트(`<<`) 연산자를 사용하는 경우 두 번째 피연산자에서 시프트 횟수를 지정합니다. 이 피연산자에 대 한 Visual Basic로 확대 되는 데이터 형식을 제공할 수 있습니다 `Integer`합니다. 그러나 두 번째 피연산자의 정의는 엄격하게 `Integer`입니다. 해당 클래스 또는 구조체에서 비트 시프트 연산자를 사용하는 클래스 또는 구조체를 정의하는 경우 정의에서 두 번째 피연산자에 대해 `Integer` 를 지정해야 합니다.  
