--- a/docs/visual-basic/misc/bc42321.md
+++ b/docs/visual-basic/misc/bc42321.md
@@ -1,5 +1,5 @@
 ---
-title: XML의 형식이 잘못되었습니다. 파일 '&lt;commentfile&gt;' 포함할 수 없습니다.
+title: XML의 형식이 잘못되었습니다. 파일 '<commentfile>' 포함할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42321
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC42321
 ms.assetid: 96611980-2323-466c-82c3-8bb678290b68
-ms.openlocfilehash: ae14132e178eb63640889d809d74712e79a1156a
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: dc6118beeb44e6cd54c117ed927dd1e38a5ecda5
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54730973"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55284572"
 ---
-# <a name="badly-formed-xml-file-ltcommentfilegt-cannot-be-included"></a>XML의 형식이 잘못되었습니다. 파일 '&lt;commentfile&gt;' 포함할 수 없습니다.
+# <a name="badly-formed-xml-file-commentfile-cannot-be-included"></a>XML의 형식이 잘못되었습니다. 파일 '\<commentfile >' 포함할 수 없습니다.
 XML 주석 중 하나의 `<include>` 태그가 존재하지 않는 파일이나 잘못된 형식의 XML이 포함된 파일을 가리킵니다.  
   
  **오류 ID:** BC42321  
