commit bilingual contents

--- a/docs/visual-basic/misc/bc42032.md
+++ b/docs/visual-basic/misc/bc42032.md
@@ -1,5 +1,5 @@
 ---
-title: 개체 연산자에 대해 사용 되는 형식의 피연산자가 '&lt;operatorsymbol&gt;'; 'IsNot' 연산자를 사용 하 여 개체 id를 테스트 하려면
+title: 개체 연산자에 대해 사용 되는 형식의 피연산자 '<operatorsymbol>'; 'IsNot' 연산자를 사용 하 여 개체 id를 테스트 하려면
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42032
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC42032
 ms.assetid: f43b163b-f8f6-489d-ba9e-df6398ccc553
-ms.openlocfilehash: c9731204229574ac170c481fa71f26ead5f1d374
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 53e4e4877e617700c472f801870456977cdebca7
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54580774"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55285261"
 ---
-# <a name="operands-of-type-object-used-for-operator-ltoperatorsymbolgt-use-the-isnot-operator-to-test-object-identity"></a><span data-ttu-id="30862-102">개체 연산자에 대해 사용 되는 형식의 피연산자가 '&lt;operatorsymbol&gt;'; 'IsNot' 연산자를 사용 하 여 개체 id를 테스트 하려면</span><span class="sxs-lookup"><span data-stu-id="30862-102">Operands of type Object used for operator '&lt;operatorsymbol&gt;'; use the 'IsNot' operator to test object identity</span></span>
-<span data-ttu-id="30862-103">식은 `<>` 의 하나 혹은 두 피연산자로 [%%amp;lt;%%amp;gt;](../../visual-basic/language-reference/data-types/object-data-type.md)연산자를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="30862-103">An expression uses the `<>` operator with one or both operands of the [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).</span></span>  
+# <a name="operands-of-type-object-used-for-operator-operatorsymbol-use-the-isnot-operator-to-test-object-identity"></a><span data-ttu-id="c70d1-102">개체 연산자에 대해 사용 되는 형식의 피연산자 '\<operatorsymbol >'; 'IsNot' 연산자를 사용 하 여 개체 id를 테스트 하려면</span><span class="sxs-lookup"><span data-stu-id="c70d1-102">Operands of type Object used for operator '\<operatorsymbol>'; use the 'IsNot' operator to test object identity</span></span>
+<span data-ttu-id="c70d1-103">식은 `<>` 의 하나 혹은 두 피연산자로 [%%amp;lt;%%amp;gt;](../../visual-basic/language-reference/data-types/object-data-type.md)연산자를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="c70d1-103">An expression uses the `<>` operator with one or both operands of the [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).</span></span>  
   
- <span data-ttu-id="30862-104">`Is` 또는 `IsNot` 연산자를 사용하여 두 개체 참조가 동일한 개체 인스턴스를 참조하는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="30862-104">You should use the `Is` or `IsNot` operator to determine whether two object references refer to the same object instance.</span></span> <span data-ttu-id="30862-105">[Comparison Operators in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)에서 "개체 비교"를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="30862-105">See "Comparing Objects" in [Comparison Operators in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md).</span></span>  
+ <span data-ttu-id="c70d1-104">`Is` 또는 `IsNot` 연산자를 사용하여 두 개체 참조가 동일한 개체 인스턴스를 참조하는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="c70d1-104">You should use the `Is` or `IsNot` operator to determine whether two object references refer to the same object instance.</span></span> <span data-ttu-id="c70d1-105">[Comparison Operators in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)에서 "개체 비교"를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="c70d1-105">See "Comparing Objects" in [Comparison Operators in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md).</span></span>  
   
- <span data-ttu-id="30862-106">변수나 식이 `Object`로 평가되는 경우 컴파일러가 *런타임에 바인딩*을 수행해야 하므로 런타임에 추가 작업이 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="30862-106">When a variable or expression evaluates to `Object`, the compiler must perform *late binding*, which causes extra operations at run time.</span></span> <span data-ttu-id="30862-107">또한 애플리케이션이 잠재적인 런타임 오류에 노출됩니다.</span><span class="sxs-lookup"><span data-stu-id="30862-107">It also exposes your application to potential run-time errors.</span></span> <span data-ttu-id="30862-108">예를 들어 <xref:System.Windows.Forms.Form> 변수에 `Object` 을 할당하여 `<>` 연산자에서 사용하려고 하는 경우 Visual Basic은 <xref:System.InvalidCastException> 개체를 값 비교에 적합한 데이터 형식으로 변환할 수 없기 때문에 런타임이 <xref:System.Windows.Forms.Form> 을 throw합니다.</span><span class="sxs-lookup"><span data-stu-id="30862-108">For example, if you assign a <xref:System.Windows.Forms.Form> to an `Object` variable and then try to use it with the `<>` operator, the runtime throws an <xref:System.InvalidCastException> because Visual Basic cannot convert a <xref:System.Windows.Forms.Form> object to a data type suitable for value comparison.</span></span> <span data-ttu-id="30862-109">두 피연산자가 <xref:System.Windows.Forms.Form>형식으로 평가되더라도 `<>` 가 <xref:System.Windows.Forms.Form> 피연산자에 대해 정의되지 않았기 때문에 작업이 실패합니다.</span><span class="sxs-lookup"><span data-stu-id="30862-109">Even if both operands evaluate to type <xref:System.Windows.Forms.Form>, the operation fails because `<>` is not defined for <xref:System.Windows.Forms.Form> operands.</span></span>  
+ <span data-ttu-id="c70d1-106">변수나 식이 `Object`로 평가되는 경우 컴파일러가 *런타임에 바인딩*을 수행해야 하므로 런타임에 추가 작업이 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="c70d1-106">When a variable or expression evaluates to `Object`, the compiler must perform *late binding*, which causes extra operations at run time.</span></span> <span data-ttu-id="c70d1-107">또한 애플리케이션이 잠재적인 런타임 오류에 노출됩니다.</span><span class="sxs-lookup"><span data-stu-id="c70d1-107">It also exposes your application to potential run-time errors.</span></span> <span data-ttu-id="c70d1-108">예를 들어 <xref:System.Windows.Forms.Form> 변수에 `Object` 을 할당하여 `<>` 연산자에서 사용하려고 하는 경우 Visual Basic은 <xref:System.InvalidCastException> 개체를 값 비교에 적합한 데이터 형식으로 변환할 수 없기 때문에 런타임이 <xref:System.Windows.Forms.Form> 을 throw합니다.</span><span class="sxs-lookup"><span data-stu-id="c70d1-108">For example, if you assign a <xref:System.Windows.Forms.Form> to an `Object` variable and then try to use it with the `<>` operator, the runtime throws an <xref:System.InvalidCastException> because Visual Basic cannot convert a <xref:System.Windows.Forms.Form> object to a data type suitable for value comparison.</span></span> <span data-ttu-id="c70d1-109">두 피연산자가 <xref:System.Windows.Forms.Form>형식으로 평가되더라도 `<>` 가 <xref:System.Windows.Forms.Form> 피연산자에 대해 정의되지 않았기 때문에 작업이 실패합니다.</span><span class="sxs-lookup"><span data-stu-id="c70d1-109">Even if both operands evaluate to type <xref:System.Windows.Forms.Form>, the operation fails because `<>` is not defined for <xref:System.Windows.Forms.Form> operands.</span></span>  
   
- <span data-ttu-id="30862-110">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="30862-110">By default, this message is a warning.</span></span> <span data-ttu-id="30862-111">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="30862-111">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="c70d1-110">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="c70d1-110">By default, this message is a warning.</span></span> <span data-ttu-id="c70d1-111">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="c70d1-111">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="30862-112">**오류 ID:** BC42032</span><span class="sxs-lookup"><span data-stu-id="30862-112">**Error ID:** BC42032</span></span>  
+ <span data-ttu-id="c70d1-112">**오류 ID:** BC42032</span><span class="sxs-lookup"><span data-stu-id="c70d1-112">**Error ID:** BC42032</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="30862-113">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="30862-113">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c70d1-113">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="c70d1-113">To correct this error</span></span>  
   
--   <span data-ttu-id="30862-114">두 개체 참조가 동일한 개체 인스턴스를 참조하는지 확인하려면 `Is` 또는 `IsNot` 연산자를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="30862-114">If you want to determine whether two object references refer to the same object instance, use the `Is` or `IsNot` operator.</span></span>  
+-   <span data-ttu-id="c70d1-114">두 개체 참조가 동일한 개체 인스턴스를 참조하는지 확인하려면 `Is` 또는 `IsNot` 연산자를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="c70d1-114">If you want to determine whether two object references refer to the same object instance, use the `Is` or `IsNot` operator.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="30862-115">참고자료</span><span class="sxs-lookup"><span data-stu-id="30862-115">See also</span></span>
-- [<span data-ttu-id="30862-116">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="30862-116">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
-- [<span data-ttu-id="30862-117">IsNot 연산자</span><span class="sxs-lookup"><span data-stu-id="30862-117">IsNot Operator</span></span>](../../visual-basic/language-reference/operators/isnot-operator.md)
-- [<span data-ttu-id="30862-118">방법: 두 개체가 관련이 있는지 여부를 결정 합니다.</span><span class="sxs-lookup"><span data-stu-id="30862-118">How to: Determine Whether Two Objects Are Related</span></span>](../../visual-basic/programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-related.md)
-- [<span data-ttu-id="30862-119">방법: 두 개체가 동일한 지 여부를 결정 합니다.</span><span class="sxs-lookup"><span data-stu-id="30862-119">How to: Determine Whether Two Objects Are Identical</span></span>](../../visual-basic/programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-identical.md)
+## <a name="see-also"></a><span data-ttu-id="c70d1-115">참고자료</span><span class="sxs-lookup"><span data-stu-id="c70d1-115">See also</span></span>
+- [<span data-ttu-id="c70d1-116">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="c70d1-116">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [<span data-ttu-id="c70d1-117">IsNot 연산자</span><span class="sxs-lookup"><span data-stu-id="c70d1-117">IsNot Operator</span></span>](../../visual-basic/language-reference/operators/isnot-operator.md)
+- [<span data-ttu-id="c70d1-118">방법: 두 개체가 관련이 있는지 여부를 결정 합니다.</span><span class="sxs-lookup"><span data-stu-id="c70d1-118">How to: Determine Whether Two Objects Are Related</span></span>](../../visual-basic/programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-related.md)
+- [<span data-ttu-id="c70d1-119">방법: 두 개체가 동일한 지 여부를 결정 합니다.</span><span class="sxs-lookup"><span data-stu-id="c70d1-119">How to: Determine Whether Two Objects Are Identical</span></span>](../../visual-basic/programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-identical.md)
