--- a/docs/visual-basic/misc/bc2006.md
+++ b/docs/visual-basic/misc/bc2006.md
@@ -1,5 +1,5 @@
 ---
-title: 옵션 &lt;optionname&gt; 필요 &lt;인수&gt;
+title: 옵션 <optionname> 필요 <argument>
 ms.date: 07/20/2015
 f1_keywords:
 - vbc2006
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC2006
 ms.assetid: 36d7d25d-8da4-4b06-847f-f59b1d681224
-ms.openlocfilehash: acd693c323c3fe91546f4483c323ddd7213a40cf
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 28f238e57f8ec89aa0db83c2025cb6e8a10df533
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54671215"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55282232"
 ---
-# <a name="option-ltoptionnamegt-requires-ltargumentgt"></a><span data-ttu-id="af001-102">옵션 &lt;optionname&gt; 필요 &lt;인수&gt;</span><span class="sxs-lookup"><span data-stu-id="af001-102">Option &lt;optionname&gt; requires &lt;argument&gt;</span></span>
-<span data-ttu-id="af001-103">필수 인수가 생략되었습니다.</span><span class="sxs-lookup"><span data-stu-id="af001-103">A required argument has been omitted.</span></span>  
+# <a name="option-optionname-requires-argument"></a><span data-ttu-id="d50ad-102">옵션 \<optionname > 필요한 \<인수 ></span><span class="sxs-lookup"><span data-stu-id="d50ad-102">Option \<optionname> requires \<argument></span></span>
+<span data-ttu-id="d50ad-103">필수 인수가 생략되었습니다.</span><span class="sxs-lookup"><span data-stu-id="d50ad-103">A required argument has been omitted.</span></span>  
   
- <span data-ttu-id="af001-104">**오류 ID:** BC2006</span><span class="sxs-lookup"><span data-stu-id="af001-104">**Error ID:** BC2006</span></span>  
+ <span data-ttu-id="d50ad-104">**오류 ID:** BC2006</span><span class="sxs-lookup"><span data-stu-id="d50ad-104">**Error ID:** BC2006</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="af001-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="af001-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d50ad-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d50ad-105">To correct this error</span></span>  
   
--   <span data-ttu-id="af001-106">누락된 인수를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="af001-106">Supply the missing argument.</span></span>  
+-   <span data-ttu-id="d50ad-106">누락된 인수를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="d50ad-106">Supply the missing argument.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="af001-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="af001-107">See also</span></span>
-- [<span data-ttu-id="af001-108">오류 형식</span><span class="sxs-lookup"><span data-stu-id="af001-108">Error Types</span></span>](../../visual-basic/programming-guide/language-features/error-types.md)
+## <a name="see-also"></a><span data-ttu-id="d50ad-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="d50ad-107">See also</span></span>
+- [<span data-ttu-id="d50ad-108">오류 형식</span><span class="sxs-lookup"><span data-stu-id="d50ad-108">Error Types</span></span>](../../visual-basic/programming-guide/language-features/error-types.md)
