--- a/docs/visual-basic/misc/bc30268.md
+++ b/docs/visual-basic/misc/bc30268.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;declaration1&gt;'를 재정의할 수 없습니다'&lt;declaration2&gt;'로 선언 된 'Shared'"
+title: "'<declaration1>'를 재정의할 수 없습니다'<declaration2>'로 선언 된 'Shared'"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30268
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30268
 ms.assetid: d011fb26-6236-462e-9173-622f8bbeb536
-ms.openlocfilehash: 03abbbcebe43ea739bdaa14e3fc0709e5175b69a
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 08df58583876cc5656a5e968829d9ab88992f2b9
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54619904"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55283441"
 ---
-# <a name="ltdeclaration1gt-cannot-override-ltdeclaration2gt-because-it-is-declared-shared"></a><span data-ttu-id="b858c-102">'&lt;declaration1&gt;'를 재정의할 수 없습니다'&lt;declaration2&gt;'로 선언 된 'Shared'</span><span class="sxs-lookup"><span data-stu-id="b858c-102">'&lt;declaration1&gt;' cannot override '&lt;declaration2&gt;' because it is declared 'Shared'</span></span>
-<span data-ttu-id="b858c-103">프로시저나 속성 선언이 동일한 이름의 상속된 요소를 재정의하려고 하지만 상속된 요소가 `Shared`로 지정되었습니다.</span><span class="sxs-lookup"><span data-stu-id="b858c-103">A procedure or property declaration attempts to override an inherited element of the same name, but the inherited element is specified as `Shared`.</span></span> <span data-ttu-id="b858c-104">공유 요소는 클래스 인스턴스와 연결되어 있지 않으므로 재정의할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b858c-104">Shared elements are not associated with any instance of the class, so they cannot be overridden.</span></span>  
+# <a name="declaration1-cannot-override-declaration2-because-it-is-declared-shared"></a><span data-ttu-id="5d045-102">'\<declaration1 >'를 재정의할 수 없습니다 '\<declaration2 >'로 선언 된 'Shared'</span><span class="sxs-lookup"><span data-stu-id="5d045-102">'\<declaration1>' cannot override '\<declaration2>' because it is declared 'Shared'</span></span>
+<span data-ttu-id="5d045-103">프로시저나 속성 선언이 동일한 이름의 상속된 요소를 재정의하려고 하지만 상속된 요소가 `Shared`로 지정되었습니다.</span><span class="sxs-lookup"><span data-stu-id="5d045-103">A procedure or property declaration attempts to override an inherited element of the same name, but the inherited element is specified as `Shared`.</span></span> <span data-ttu-id="5d045-104">공유 요소는 클래스 인스턴스와 연결되어 있지 않으므로 재정의할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="5d045-104">Shared elements are not associated with any instance of the class, so they cannot be overridden.</span></span>  
   
- <span data-ttu-id="b858c-105">**오류 ID:** BC30268</span><span class="sxs-lookup"><span data-stu-id="b858c-105">**Error ID:** BC30268</span></span>  
+ <span data-ttu-id="5d045-105">**오류 ID:** BC30268</span><span class="sxs-lookup"><span data-stu-id="5d045-105">**Error ID:** BC30268</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b858c-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b858c-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5d045-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="5d045-106">To correct this error</span></span>  
   
--   <span data-ttu-id="b858c-107">상속된 요소에서 `Shared` 키워드를 제거하거나 재정의 선언을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="b858c-107">Remove the `Shared` keyword from the inherited element, or remove the overriding declaration.</span></span>  
+-   <span data-ttu-id="5d045-107">상속된 요소에서 `Shared` 키워드를 제거하거나 재정의 선언을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="5d045-107">Remove the `Shared` keyword from the inherited element, or remove the overriding declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b858c-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="b858c-108">See also</span></span>
-- [<span data-ttu-id="b858c-109">속성 및 파생된 클래스에서 메서드 재정의</span><span class="sxs-lookup"><span data-stu-id="b858c-109">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+## <a name="see-also"></a><span data-ttu-id="5d045-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="5d045-108">See also</span></span>
+- [<span data-ttu-id="5d045-109">속성 및 파생된 클래스에서 메서드 재정의</span><span class="sxs-lookup"><span data-stu-id="5d045-109">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
