--- a/docs/visual-basic/misc/bc30367.md
+++ b/docs/visual-basic/misc/bc30367.md
@@ -1,5 +1,5 @@
 ---
-title: 클래스&lt;classname&gt;' 기본 속성이 없으므로 인덱싱할 수 없습니다
+title: 클래스의<classname>' 기본 속성이 없으므로 인덱싱할 수 없습니다
 ms.date: 07/20/2015
 f1_keywords:
 - bc30367
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30367
 ms.assetid: bcccde7e-4433-459f-a060-7236902fc05e
-ms.openlocfilehash: 0564d5bbdcc65883c222466c11a5687f244034b5
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: d4e06c432c671a09edca81d40479d9eb439d6641
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54682498"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55283376"
 ---
-# <a name="class-ltclassnamegt-cannot-be-indexed-because-it-has-no-default-property"></a><span data-ttu-id="2b709-102">클래스&lt;classname&gt;' 기본 속성이 없으므로 인덱싱할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="2b709-102">Class '&lt;classname&gt;' cannot be indexed because it has no default property</span></span>
-<span data-ttu-id="2b709-103">클래스에 대한 기본 속성을 제공하지 못했습니다.</span><span class="sxs-lookup"><span data-stu-id="2b709-103">You have failed to supply a default property for a class.</span></span>  
+# <a name="class-classname-cannot-be-indexed-because-it-has-no-default-property"></a><span data-ttu-id="f579e-102">클래스의\<응용 프로그램 이름 >' 기본 속성이 없으므로 인덱싱할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="f579e-102">Class '\<classname>' cannot be indexed because it has no default property</span></span>
+<span data-ttu-id="f579e-103">클래스에 대한 기본 속성을 제공하지 못했습니다.</span><span class="sxs-lookup"><span data-stu-id="f579e-103">You have failed to supply a default property for a class.</span></span>  
   
- <span data-ttu-id="2b709-104">**오류 ID:** BC30367</span><span class="sxs-lookup"><span data-stu-id="2b709-104">**Error ID:** BC30367</span></span>  
+ <span data-ttu-id="f579e-104">**오류 ID:** BC30367</span><span class="sxs-lookup"><span data-stu-id="f579e-104">**Error ID:** BC30367</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2b709-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="2b709-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f579e-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f579e-105">To correct this error</span></span>  
   
--   <span data-ttu-id="2b709-106">`Default` 키워드로 선언을 시작하여 속성을 기본 속성으로 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="2b709-106">Specify a property as the default property by starting its declaration with the `Default` keyword.</span></span>  
+-   <span data-ttu-id="f579e-106">`Default` 키워드로 선언을 시작하여 속성을 기본 속성으로 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="f579e-106">Specify a property as the default property by starting its declaration with the `Default` keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2b709-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="2b709-107">See also</span></span>
-- [<span data-ttu-id="2b709-108">Visual Basic의 기본 속성 변경</span><span class="sxs-lookup"><span data-stu-id="2b709-108">Default Property Changes in Visual Basic</span></span>](https://msdn.microsoft.com/library/9b8cfad7-40ac-4b83-affb-1ff781755a4c)
-- [<span data-ttu-id="2b709-109">기본</span><span class="sxs-lookup"><span data-stu-id="2b709-109">Default</span></span>](../../visual-basic/language-reference/modifiers/default.md)
+## <a name="see-also"></a><span data-ttu-id="f579e-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="f579e-107">See also</span></span>
+- [<span data-ttu-id="f579e-108">Visual Basic의 기본 속성 변경</span><span class="sxs-lookup"><span data-stu-id="f579e-108">Default Property Changes in Visual Basic</span></span>](https://msdn.microsoft.com/library/9b8cfad7-40ac-4b83-affb-1ff781755a4c)
+- [<span data-ttu-id="f579e-109">기본</span><span class="sxs-lookup"><span data-stu-id="f579e-109">Default</span></span>](../../visual-basic/language-reference/modifiers/default.md)
