--- a/docs/visual-basic/misc/bc30385.md
+++ b/docs/visual-basic/misc/bc30385.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;한정자&gt;'는 Delegate 선언에서 유효 하지 않은"
+title: "'<modifier>'는 Delegate 선언에서 유효 하지 않은"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30385
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30385
 ms.assetid: cacbcdc7-dca9-4a22-b3bf-7e264308c031
-ms.openlocfilehash: b655f72821a97dcf1d2d498013491e5bdba4c296
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 45ca38e1350e9a5b47755e1f2fb2dc12e995f7cc
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54515279"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55283215"
 ---
-# <a name="ltmodifiergt-is-not-valid-on-a-delegate-declaration"></a><span data-ttu-id="56811-102">'&lt;한정자&gt;'는 Delegate 선언에서 유효 하지 않은</span><span class="sxs-lookup"><span data-stu-id="56811-102">'&lt;modifier&gt;' is not valid on a Delegate declaration</span></span>
-<span data-ttu-id="56811-103">대리자 선언에서 `Shared`과 같은 한정자를 사용하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="56811-103">You attempted to use a modifier, such as `Shared`, on a delegate declaration.</span></span> <span data-ttu-id="56811-104">대리자는 개체 메서드 지정이 전달되는 생성자를 정의하여 다른 개체의 메서드를 호출하는 데 사용되는 개체를 위임합니다.</span><span class="sxs-lookup"><span data-stu-id="56811-104">Delegates are objects used to call the methods of other objects, by defining a constructor that is passed the specification of an object method.</span></span> <span data-ttu-id="56811-105">대리자 선언에서 한정자를 지정할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="56811-105">It is not valid to specify a modifier on a delegate declaration.</span></span>  
+# <a name="modifier-is-not-valid-on-a-delegate-declaration"></a><span data-ttu-id="abb69-102">'\<한정자 >'는 Delegate 선언에서 유효 하지 않은</span><span class="sxs-lookup"><span data-stu-id="abb69-102">'\<modifier>' is not valid on a Delegate declaration</span></span>
+<span data-ttu-id="abb69-103">대리자 선언에서 `Shared`과 같은 한정자를 사용하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="abb69-103">You attempted to use a modifier, such as `Shared`, on a delegate declaration.</span></span> <span data-ttu-id="abb69-104">대리자는 개체 메서드 지정이 전달되는 생성자를 정의하여 다른 개체의 메서드를 호출하는 데 사용되는 개체를 위임합니다.</span><span class="sxs-lookup"><span data-stu-id="abb69-104">Delegates are objects used to call the methods of other objects, by defining a constructor that is passed the specification of an object method.</span></span> <span data-ttu-id="abb69-105">대리자 선언에서 한정자를 지정할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="abb69-105">It is not valid to specify a modifier on a delegate declaration.</span></span>  
   
- <span data-ttu-id="56811-106">**오류 ID:** BC30385</span><span class="sxs-lookup"><span data-stu-id="56811-106">**Error ID:** BC30385</span></span>  
+ <span data-ttu-id="abb69-106">**오류 ID:** BC30385</span><span class="sxs-lookup"><span data-stu-id="abb69-106">**Error ID:** BC30385</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="56811-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="56811-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="abb69-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="abb69-107">To correct this error</span></span>  
   
-1.  <span data-ttu-id="56811-108">한정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="56811-108">Remove the modifier.</span></span>  
+1.  <span data-ttu-id="abb69-108">한정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="abb69-108">Remove the modifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="56811-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="56811-109">See also</span></span>
-- [<span data-ttu-id="56811-110">Delegate 문</span><span class="sxs-lookup"><span data-stu-id="56811-110">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [<span data-ttu-id="56811-111">방법: 대리자 메서드 호출</span><span class="sxs-lookup"><span data-stu-id="56811-111">How to: Invoke a Delegate Method</span></span>](../../visual-basic/programming-guide/language-features/delegates/how-to-invoke-a-delegate-method.md)
+## <a name="see-also"></a><span data-ttu-id="abb69-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="abb69-109">See also</span></span>
+- [<span data-ttu-id="abb69-110">Delegate 문</span><span class="sxs-lookup"><span data-stu-id="abb69-110">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
+- [<span data-ttu-id="abb69-111">방법: 대리자 메서드 호출</span><span class="sxs-lookup"><span data-stu-id="abb69-111">How to: Invoke a Delegate Method</span></span>](../../visual-basic/programming-guide/language-features/delegates/how-to-invoke-a-delegate-method.md)
