--- a/docs/visual-basic/misc/bc30526.md
+++ b/docs/visual-basic/misc/bc30526.md
@@ -1,5 +1,5 @@
 ---
-title: 속성 '&lt;propertyname&gt;'은 'ReadOnly'
+title: 속성 '<propertyname>'은 'ReadOnly'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30526
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30526
 ms.assetid: da79b77b-0132-4ef3-9825-55c5656f9bbc
-ms.openlocfilehash: 4a4f3b5f5567ae1d11865dcd8eca5bee86ea5126
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 57a2691d85837e9c8d4eef745e4b8020b63ea050
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54535335"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55283532"
 ---
-# <a name="property-ltpropertynamegt-is-readonly"></a><span data-ttu-id="90402-102">속성 '&lt;propertyname&gt;'은 'ReadOnly'</span><span class="sxs-lookup"><span data-stu-id="90402-102">Property '&lt;propertyname&gt;' is 'ReadOnly'</span></span>
-<span data-ttu-id="90402-103">`ReadOnly`로 선언된 속성에서 값을 할당하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="90402-103">You have tried to assign a value to a property that is declared `ReadOnly`.</span></span>  
+# <a name="property-propertyname-is-readonly"></a><span data-ttu-id="23043-102">속성 '\<propertyname >'은 'ReadOnly'</span><span class="sxs-lookup"><span data-stu-id="23043-102">Property '\<propertyname>' is 'ReadOnly'</span></span>
+<span data-ttu-id="23043-103">`ReadOnly`로 선언된 속성에서 값을 할당하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="23043-103">You have tried to assign a value to a property that is declared `ReadOnly`.</span></span>  
   
- <span data-ttu-id="90402-104">**오류 ID:** BC30526</span><span class="sxs-lookup"><span data-stu-id="90402-104">**Error ID:** BC30526</span></span>  
+ <span data-ttu-id="23043-104">**오류 ID:** BC30526</span><span class="sxs-lookup"><span data-stu-id="23043-104">**Error ID:** BC30526</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="90402-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="90402-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="23043-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="23043-105">To correct this error</span></span>  
   
--   <span data-ttu-id="90402-106">속성 선언에서 `ReadOnly` 지정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="90402-106">Remove the `ReadOnly` specifier from the property declaration.</span></span>  
+-   <span data-ttu-id="23043-106">속성 선언에서 `ReadOnly` 지정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="23043-106">Remove the `ReadOnly` specifier from the property declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="90402-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="90402-107">See also</span></span>
-- [<span data-ttu-id="90402-108">ReadOnly</span><span class="sxs-lookup"><span data-stu-id="90402-108">ReadOnly</span></span>](../../visual-basic/language-reference/modifiers/readonly.md)
+## <a name="see-also"></a><span data-ttu-id="23043-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="23043-107">See also</span></span>
+- [<span data-ttu-id="23043-108">ReadOnly</span><span class="sxs-lookup"><span data-stu-id="23043-108">ReadOnly</span></span>](../../visual-basic/language-reference/modifiers/readonly.md)
