--- a/docs/visual-basic/misc/bc30934.md
+++ b/docs/visual-basic/misc/bc30934.md
@@ -1,5 +1,5 @@
 ---
-title: 변환에서 '&lt;type1&gt;'to'&lt;type2&gt;' 특성에 대 한 인수로 사용 된 상수 식에서 발생할 수 없습니다
+title: 변환에서 '<type1>'에'<type2>' 특성에 대 한 인수로 사용 된 상수 식에서 발생할 수 없습니다
 ms.date: 07/20/2015
 f1_keywords:
 - bc30934
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC30934
 ms.assetid: 120e05f9-1d0e-4800-b05c-a8373e286b9b
-ms.openlocfilehash: 29706b5d7215c765ad3f1e6ae5be955ddedb91d6
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 58b67a383d677f682e03f3246be93af46a829b3c
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54747780"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55284130"
 ---
-# <a name="conversion-from-lttype1gt-to-lttype2gt-cannot-occur-in-a-constant-expression-used-as-an-argument-to-an-attribute"></a><span data-ttu-id="0935f-102">변환에서 '&lt;type1&gt;'to'&lt;type2&gt;' 특성에 대 한 인수로 사용 된 상수 식에서 발생할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="0935f-102">Conversion from '&lt;type1&gt;' to '&lt;type2&gt;' cannot occur in a constant expression used as an argument to an attribute</span></span>
-<span data-ttu-id="0935f-103">특성 인수에 사용 되는 식에서 해당 특성 매개 변수는 다른 데이터 형식으로 평가 하 고 Visual Basic 특성 인수에 대 한 필수 형식 변환을 허용 하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="0935f-103">An expression used for an attribute argument evaluates to a data type different from that of the corresponding attribute parameter, and Visual Basic does not allow the required type conversion for attribute arguments.</span></span>  
+# <a name="conversion-from-type1-to-type2-cannot-occur-in-a-constant-expression-used-as-an-argument-to-an-attribute"></a><span data-ttu-id="b0d9b-102">변환에서 '\<type1 >'에 '\<type2 >' 특성에 대 한 인수로 사용 된 상수 식에서 발생할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="b0d9b-102">Conversion from '\<type1>' to '\<type2>' cannot occur in a constant expression used as an argument to an attribute</span></span>
+<span data-ttu-id="b0d9b-103">특성 인수에 사용 되는 식에서 해당 특성 매개 변수는 다른 데이터 형식으로 평가 하 고 Visual Basic 특성 인수에 대 한 필수 형식 변환을 허용 하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="b0d9b-103">An expression used for an attribute argument evaluates to a data type different from that of the corresponding attribute parameter, and Visual Basic does not allow the required type conversion for attribute arguments.</span></span>  
   
- <span data-ttu-id="0935f-104">특성은 해당 특성이 적용되는 요소에 대한 메타데이터를 제공하며, 컴파일러가 컴파일 시간에 모든 메타데이터를 생성할 수 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="0935f-104">An attribute provides metadata for the element it is applied to, and the compiler must be able to construct all the metadata at compile time.</span></span> <span data-ttu-id="0935f-105">이러한 이유로 모든 특성은 컴파일 시간에 상수인 값을 사용해야 하므로 모든 특성 인수가 컴파일 시간 상수 값으로 계산되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="0935f-105">For this reason, every attribute must use values that are constant at compile time, and therefore every attribute argument must evaluate to a compile-time constant value.</span></span>  
+ <span data-ttu-id="b0d9b-104">특성은 해당 특성이 적용되는 요소에 대한 메타데이터를 제공하며, 컴파일러가 컴파일 시간에 모든 메타데이터를 생성할 수 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="b0d9b-104">An attribute provides metadata for the element it is applied to, and the compiler must be able to construct all the metadata at compile time.</span></span> <span data-ttu-id="b0d9b-105">이러한 이유로 모든 특성은 컴파일 시간에 상수인 값을 사용해야 하므로 모든 특성 인수가 컴파일 시간 상수 값으로 계산되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="b0d9b-105">For this reason, every attribute must use values that are constant at compile time, and therefore every attribute argument must evaluate to a compile-time constant value.</span></span>  
   
- <span data-ttu-id="0935f-106">특정 형식 변환은 컴파일 시간에 상수인 값을 생성할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="0935f-106">Certain type conversions cannot produce values that are constant at compile time.</span></span> <span data-ttu-id="0935f-107">예를 들어 `String` 을 `Double` 또는 `Date` 로 변환할지 여부는 런타임의 로캘 설정에 따라 달라집니다.</span><span class="sxs-lookup"><span data-stu-id="0935f-107">For example, converting a `String` to a `Double` or a `Date` depends on the locale setting at run time.</span></span> <span data-ttu-id="0935f-108">파생 형식 배열을 `Object`배열로 변환 등의 기타 변환에서는 컴파일러가 특성 인수에서 허용할 수 없도록 하는 다양한 문제가 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="0935f-108">Other conversions, such as an array of a derived type to an array of `Object`, present a variety of problems that do not permit the compiler to allow them on attribute arguments.</span></span>  
+ <span data-ttu-id="b0d9b-106">특정 형식 변환은 컴파일 시간에 상수인 값을 생성할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b0d9b-106">Certain type conversions cannot produce values that are constant at compile time.</span></span> <span data-ttu-id="b0d9b-107">예를 들어 `String` 을 `Double` 또는 `Date` 로 변환할지 여부는 런타임의 로캘 설정에 따라 달라집니다.</span><span class="sxs-lookup"><span data-stu-id="b0d9b-107">For example, converting a `String` to a `Double` or a `Date` depends on the locale setting at run time.</span></span> <span data-ttu-id="b0d9b-108">파생 형식 배열을 `Object`배열로 변환 등의 기타 변환에서는 컴파일러가 특성 인수에서 허용할 수 없도록 하는 다양한 문제가 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="b0d9b-108">Other conversions, such as an array of a derived type to an array of `Object`, present a variety of problems that do not permit the compiler to allow them on attribute arguments.</span></span>  
   
- <span data-ttu-id="0935f-109">**오류 ID:** BC30934</span><span class="sxs-lookup"><span data-stu-id="0935f-109">**Error ID:** BC30934</span></span>  
+ <span data-ttu-id="b0d9b-109">**오류 ID:** BC30934</span><span class="sxs-lookup"><span data-stu-id="b0d9b-109">**Error ID:** BC30934</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0935f-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="0935f-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b0d9b-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b0d9b-110">To correct this error</span></span>  
   
--   <span data-ttu-id="0935f-111">특성에 정의된 대로 해당 매개 변수와 동일한 데이터 형식으로 계산되는 식을 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="0935f-111">Use an expression that evaluates to the same data type as the corresponding parameter, as defined by the attribute.</span></span>  
+-   <span data-ttu-id="b0d9b-111">특성에 정의된 대로 해당 매개 변수와 동일한 데이터 형식으로 계산되는 식을 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="b0d9b-111">Use an expression that evaluates to the same data type as the corresponding parameter, as defined by the attribute.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0935f-112">참고자료</span><span class="sxs-lookup"><span data-stu-id="0935f-112">See also</span></span>
-- [<span data-ttu-id="0935f-113">특성 개요</span><span class="sxs-lookup"><span data-stu-id="0935f-113">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
+## <a name="see-also"></a><span data-ttu-id="b0d9b-112">참고자료</span><span class="sxs-lookup"><span data-stu-id="b0d9b-112">See also</span></span>
+- [<span data-ttu-id="b0d9b-113">특성 개요</span><span class="sxs-lookup"><span data-stu-id="b0d9b-113">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
 
-- [<span data-ttu-id="0935f-114">Const 문</span><span class="sxs-lookup"><span data-stu-id="0935f-114">Const Statement</span></span>](../../visual-basic/language-reference/statements/const-statement.md)
-- [<span data-ttu-id="0935f-115">Visual Basic의 형식 변환</span><span class="sxs-lookup"><span data-stu-id="0935f-115">Type Conversions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+- [<span data-ttu-id="b0d9b-114">Const 문</span><span class="sxs-lookup"><span data-stu-id="b0d9b-114">Const Statement</span></span>](../../visual-basic/language-reference/statements/const-statement.md)
+- [<span data-ttu-id="b0d9b-115">Visual Basic의 형식 변환</span><span class="sxs-lookup"><span data-stu-id="b0d9b-115">Type Conversions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
