--- a/docs/visual-basic/misc/bc31014.md
+++ b/docs/visual-basic/misc/bc31014.md
@@ -1,5 +1,5 @@
 ---
-title: "진입점을 찾을 수 없습니다. '&lt;이름을&gt;'에서 'DLL&lt;filename&gt;': &lt;오류&gt;"
+title: 진입점을 찾을 수 없습니다. '<name>'DLL' in에서<filename>'. <error>
 ms.date: 07/20/2015
 f1_keywords:
 - bc31014
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC31014
 ms.assetid: 84400dc7-2f4f-496a-ae24-5c1d23d0e470
-ms.openlocfilehash: 336b7c52d1fbaf8f42ba137355cc6473c63dbbd9
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 456bb465f7e30ef7782675b8128cd4c228f2641a
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54715883"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55284208"
 ---
-# <a name="unable-to-find-entry-point-ltnamegt-in-dll-ltfilenamegt-lterrorgt"></a><span data-ttu-id="2e30a-102">진입점을 찾을 수 없습니다. '&lt;이름을&gt;'에서 'DLL&lt;filename&gt;': &lt;오류&gt;</span><span class="sxs-lookup"><span data-stu-id="2e30a-102">Unable to find entry point '&lt;name&gt;' in DLL '&lt;filename&gt;': &lt;error&gt;</span></span>
-<span data-ttu-id="2e30a-103">지정된 DLL에서 프로시저 이름을 찾을 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="2e30a-103">The procedure name could not be found in the specified DLL.</span></span>  
+# <a name="unable-to-find-entry-point-name-in-dll-filename-error"></a><span data-ttu-id="6dd05-102">진입점을 찾을 수 없습니다. '\<이름 >' DLL에서 '\<파일 이름 >': \<오류 ></span><span class="sxs-lookup"><span data-stu-id="6dd05-102">Unable to find entry point '\<name>' in DLL '\<filename>': \<error></span></span>
+<span data-ttu-id="6dd05-103">지정된 DLL에서 프로시저 이름을 찾을 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="6dd05-103">The procedure name could not be found in the specified DLL.</span></span>  
   
- <span data-ttu-id="2e30a-104">**오류 ID:** BC31014</span><span class="sxs-lookup"><span data-stu-id="2e30a-104">**Error ID:** BC31014</span></span>  
+ <span data-ttu-id="6dd05-104">**오류 ID:** BC31014</span><span class="sxs-lookup"><span data-stu-id="6dd05-104">**Error ID:** BC31014</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2e30a-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="2e30a-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6dd05-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="6dd05-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="2e30a-106">프로시저 이름의 철자가 정확하고 대소문자가 DLL의 함수와 일치하는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="2e30a-106">Verify that the procedure name is spelled correctly, and that the casing matches that of the function in the DLL.</span></span>  
+1.  <span data-ttu-id="6dd05-106">프로시저 이름의 철자가 정확하고 대소문자가 DLL의 함수와 일치하는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="6dd05-106">Verify that the procedure name is spelled correctly, and that the casing matches that of the function in the DLL.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2e30a-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="2e30a-107">See also</span></span>
-- [<span data-ttu-id="2e30a-108">연습: Windows API 호출</span><span class="sxs-lookup"><span data-stu-id="2e30a-108">Walkthrough: Calling Windows APIs</span></span>](../../visual-basic/programming-guide/com-interop/walkthrough-calling-windows-apis.md)
+## <a name="see-also"></a><span data-ttu-id="6dd05-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="6dd05-107">See also</span></span>
+- [<span data-ttu-id="6dd05-108">연습: Windows API 호출</span><span class="sxs-lookup"><span data-stu-id="6dd05-108">Walkthrough: Calling Windows APIs</span></span>](../../visual-basic/programming-guide/com-interop/walkthrough-calling-windows-apis.md)
