--- a/docs/visual-basic/misc/bc31500.md
+++ b/docs/visual-basic/misc/bc31500.md
@@ -1,5 +1,5 @@
 ---
-title: "'Shared' 특성의 속성 '&lt;대상일&gt;'는 할당 대상일 수 없습니다"
+title: "'Shared' 특성의 속성 '<propertyfield>'는 할당 대상일 수 없습니다"
 ms.date: 07/20/2015
 f1_keywords:
 - bc31500
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC31500
 ms.assetid: dffa2b07-9609-4aa3-ae58-c0804d8a05d6
-ms.openlocfilehash: e6d9587cd71c35baa785bb9e2a9a5449619b5c0f
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: e7ba4abaf7887d2726be9c109913fd29f72a0dbd
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54601157"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55284754"
 ---
-# <a name="shared-attribute-property-ltpropertyfieldgt-cannot-be-the-target-of-an-assignment"></a><span data-ttu-id="e6309-102">'Shared' 특성의 속성 '&lt;대상일&gt;'는 할당 대상일 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="e6309-102">'Shared' attribute property '&lt;propertyfield&gt;' cannot be the target of an assignment</span></span>
-<span data-ttu-id="e6309-103">특성의 `ReadOnly` 또는 `Shared` 속성에 값을 할당하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="e6309-103">An attempt was made to assign a value to a `ReadOnly` or `Shared` property in an attribute.</span></span>  
+# <a name="shared-attribute-property-propertyfield-cannot-be-the-target-of-an-assignment"></a><span data-ttu-id="40992-102">'Shared' 특성의 속성 '\<대상일 >'는 할당 대상일 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="40992-102">'Shared' attribute property '\<propertyfield>' cannot be the target of an assignment</span></span>
+<span data-ttu-id="40992-103">특성의 `ReadOnly` 또는 `Shared` 속성에 값을 할당하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="40992-103">An attempt was made to assign a value to a `ReadOnly` or `Shared` property in an attribute.</span></span>  
   
- <span data-ttu-id="e6309-104">**오류 ID:** BC31500</span><span class="sxs-lookup"><span data-stu-id="e6309-104">**Error ID:** BC31500</span></span>  
+ <span data-ttu-id="40992-104">**오류 ID:** BC31500</span><span class="sxs-lookup"><span data-stu-id="40992-104">**Error ID:** BC31500</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e6309-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="e6309-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="40992-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="40992-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="e6309-106">속성 대입문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="e6309-106">Remove the property assignment statement.</span></span>  
+1.  <span data-ttu-id="40992-106">속성 대입문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="40992-106">Remove the property assignment statement.</span></span>  
   
-2.  <span data-ttu-id="e6309-107">개발한 속성을 사용하는 경우 특성 속성에서 `ReadOnly` 또는 `Shared` 한정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="e6309-107">If using properties you developed, remove the `ReadOnly` or `Shared` modifiers from the attribute property.</span></span>  
+2.  <span data-ttu-id="40992-107">개발한 속성을 사용하는 경우 특성 속성에서 `ReadOnly` 또는 `Shared` 한정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="40992-107">If using properties you developed, remove the `ReadOnly` or `Shared` modifiers from the attribute property.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e6309-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="e6309-108">See also</span></span>
-- [<span data-ttu-id="e6309-109">공유</span><span class="sxs-lookup"><span data-stu-id="e6309-109">Shared</span></span>](../../visual-basic/language-reference/modifiers/shared.md)
-- [<span data-ttu-id="e6309-110">특성 개요</span><span class="sxs-lookup"><span data-stu-id="e6309-110">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
+## <a name="see-also"></a><span data-ttu-id="40992-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="40992-108">See also</span></span>
+- [<span data-ttu-id="40992-109">공유</span><span class="sxs-lookup"><span data-stu-id="40992-109">Shared</span></span>](../../visual-basic/language-reference/modifiers/shared.md)
+- [<span data-ttu-id="40992-110">특성 개요</span><span class="sxs-lookup"><span data-stu-id="40992-110">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
