--- a/docs/visual-basic/misc/bc32118.md
+++ b/docs/visual-basic/misc/bc32118.md
@@ -1,5 +1,5 @@
 ---
-title: 액세스 가능한 '&lt;genericprocedurename&gt;'이 개수의 형식 인수를 허용 합니다.
+title: 액세스 가능한 '<genericprocedurename>'이 개수의 형식 인수를 허용 합니다.
 ms.date: 07/20/2015
 f1_keywords:
 - bc32118
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC32118
 ms.assetid: 4ee942ba-0fa1-4ec1-9c2c-a0c0dc3f1b17
-ms.openlocfilehash: 8369eb54df84b76022d566210d876639f7178355
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: a077b67842e13c3f5237b2ea717d272582a3c9ce
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54549225"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55285222"
 ---
-# <a name="no-accessible-ltgenericprocedurenamegt-accepts-this-number-of-type-arguments"></a><span data-ttu-id="5ac1d-102">액세스 가능한 '&lt;genericprocedurename&gt;'이 개수의 형식 인수를 허용 합니다.</span><span class="sxs-lookup"><span data-stu-id="5ac1d-102">No accessible '&lt;genericprocedurename&gt;' accepts this number of type arguments</span></span>
-<span data-ttu-id="5ac1d-103">문에서 오버로드된 버전이 둘 이상 있는 제네릭 프로시저를 호출하지만 호출에서 제공된 형식 인수 개수와 동일한 개수의 형식 매개 변수를 정의하는 오버로드된 버전이 없습니다.</span><span class="sxs-lookup"><span data-stu-id="5ac1d-103">A statement calls a generic procedure that has more than one overloaded version, but none of the overloaded versions defines the same number of type parameters as the number of type arguments supplied in the call.</span></span>  
+# <a name="no-accessible-genericprocedurename-accepts-this-number-of-type-arguments"></a><span data-ttu-id="282c3-102">액세스 가능한 '\<genericprocedurename >'이 개수의 형식 인수를 허용 합니다.</span><span class="sxs-lookup"><span data-stu-id="282c3-102">No accessible '\<genericprocedurename>' accepts this number of type arguments</span></span>
+<span data-ttu-id="282c3-103">문에서 오버로드된 버전이 둘 이상 있는 제네릭 프로시저를 호출하지만 호출에서 제공된 형식 인수 개수와 동일한 개수의 형식 매개 변수를 정의하는 오버로드된 버전이 없습니다.</span><span class="sxs-lookup"><span data-stu-id="282c3-103">A statement calls a generic procedure that has more than one overloaded version, but none of the overloaded versions defines the same number of type parameters as the number of type arguments supplied in the call.</span></span>  
   
- <span data-ttu-id="5ac1d-104">제네릭 버전이 하나뿐인 경우 형식 인수 없이 호출하며, 컴파일러에서 *형식 유추*를 시도할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="5ac1d-104">If there is only one generic version, you call it without type arguments, and the compiler can attempt *type inference*.</span></span> <span data-ttu-id="5ac1d-105">자세한 내용은 [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)의 "형식 유추"를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="5ac1d-105">For more information, see "Type Inference" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).</span></span> <span data-ttu-id="5ac1d-106">그러나 제네릭 버전이 여러 개인 경우 형식 인수를 제공하지 않으면 컴파일러에서 그중 하나를 선택할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="5ac1d-106">However, if there is more than one generic version, the compiler is not able to choose among them unless you supply type arguments.</span></span> <span data-ttu-id="5ac1d-107">형식 인수를 하나 제공한 경우 모든 형식 매개 변수에 대해 오버로드 버전에서 정의한 형식 인수를 제공해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="5ac1d-107">If you supply one type argument, you must supply a type argument for every type parameter that one of the overloaded versions defines.</span></span>  
+ <span data-ttu-id="282c3-104">제네릭 버전이 하나뿐인 경우 형식 인수 없이 호출하며, 컴파일러에서 *형식 유추*를 시도할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="282c3-104">If there is only one generic version, you call it without type arguments, and the compiler can attempt *type inference*.</span></span> <span data-ttu-id="282c3-105">자세한 내용은 [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)의 "형식 유추"를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="282c3-105">For more information, see "Type Inference" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).</span></span> <span data-ttu-id="282c3-106">그러나 제네릭 버전이 여러 개인 경우 형식 인수를 제공하지 않으면 컴파일러에서 그중 하나를 선택할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="282c3-106">However, if there is more than one generic version, the compiler is not able to choose among them unless you supply type arguments.</span></span> <span data-ttu-id="282c3-107">형식 인수를 하나 제공한 경우 모든 형식 매개 변수에 대해 오버로드 버전에서 정의한 형식 인수를 제공해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="282c3-107">If you supply one type argument, you must supply a type argument for every type parameter that one of the overloaded versions defines.</span></span>  
   
- <span data-ttu-id="5ac1d-108">**오류 ID:** BC32118</span><span class="sxs-lookup"><span data-stu-id="5ac1d-108">**Error ID:** BC32118</span></span>  
+ <span data-ttu-id="282c3-108">**오류 ID:** BC32118</span><span class="sxs-lookup"><span data-stu-id="282c3-108">**Error ID:** BC32118</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5ac1d-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="5ac1d-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="282c3-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="282c3-109">To correct this error</span></span>  
   
--   <span data-ttu-id="5ac1d-110">호출하려는 오버로드된 버전을 결정하고 적절한 개수의 형식 인수를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="5ac1d-110">Decide which overloaded version you want to call, and then supply the appropriate number of type arguments.</span></span>  
+-   <span data-ttu-id="282c3-110">호출하려는 오버로드된 버전을 결정하고 적절한 개수의 형식 인수를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="282c3-110">Decide which overloaded version you want to call, and then supply the appropriate number of type arguments.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5ac1d-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="5ac1d-111">See also</span></span>
-- [<span data-ttu-id="5ac1d-112">오버로드</span><span class="sxs-lookup"><span data-stu-id="5ac1d-112">Overloads</span></span>](../../visual-basic/language-reference/modifiers/overloads.md)
-- [<span data-ttu-id="5ac1d-113">프로시저 오버로딩</span><span class="sxs-lookup"><span data-stu-id="5ac1d-113">Procedure Overloading</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
-- [<span data-ttu-id="5ac1d-114">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="5ac1d-114">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="5ac1d-115">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="5ac1d-115">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+## <a name="see-also"></a><span data-ttu-id="282c3-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="282c3-111">See also</span></span>
+- [<span data-ttu-id="282c3-112">오버로드</span><span class="sxs-lookup"><span data-stu-id="282c3-112">Overloads</span></span>](../../visual-basic/language-reference/modifiers/overloads.md)
+- [<span data-ttu-id="282c3-113">프로시저 오버로딩</span><span class="sxs-lookup"><span data-stu-id="282c3-113">Procedure Overloading</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
+- [<span data-ttu-id="282c3-114">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="282c3-114">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="282c3-115">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="282c3-115">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
