--- a/docs/visual-basic/misc/bc42321.md
+++ b/docs/visual-basic/misc/bc42321.md
@@ -1,5 +1,5 @@
 ---
-title: XML의 형식이 잘못되었습니다. 파일 '&lt;commentfile&gt;' 포함할 수 없습니다.
+title: XML의 형식이 잘못되었습니다. 파일 '<commentfile>' 포함할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42321
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC42321
 ms.assetid: 96611980-2323-466c-82c3-8bb678290b68
-ms.openlocfilehash: ae14132e178eb63640889d809d74712e79a1156a
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: dc6118beeb44e6cd54c117ed927dd1e38a5ecda5
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54730973"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55284572"
 ---
-# <a name="badly-formed-xml-file-ltcommentfilegt-cannot-be-included"></a><span data-ttu-id="ec1d2-103">XML의 형식이 잘못되었습니다.</span><span class="sxs-lookup"><span data-stu-id="ec1d2-103">Badly formed XML.</span></span> <span data-ttu-id="ec1d2-104">파일 '&lt;commentfile&gt;' 포함할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="ec1d2-104">File '&lt;commentfile&gt;' cannot be included</span></span>
-<span data-ttu-id="ec1d2-105">XML 주석 중 하나의 `<include>` 태그가 존재하지 않는 파일이나 잘못된 형식의 XML이 포함된 파일을 가리킵니다.</span><span class="sxs-lookup"><span data-stu-id="ec1d2-105">An `<include>` tag in one of the XML comments refers to a file that does not exist or a file that contains badly formed XML.</span></span>  
+# <a name="badly-formed-xml-file-commentfile-cannot-be-included"></a><span data-ttu-id="54f63-103">XML의 형식이 잘못되었습니다.</span><span class="sxs-lookup"><span data-stu-id="54f63-103">Badly formed XML.</span></span> <span data-ttu-id="54f63-104">파일 '\<commentfile >' 포함할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="54f63-104">File '\<commentfile>' cannot be included</span></span>
+<span data-ttu-id="54f63-105">XML 주석 중 하나의 `<include>` 태그가 존재하지 않는 파일이나 잘못된 형식의 XML이 포함된 파일을 가리킵니다.</span><span class="sxs-lookup"><span data-stu-id="54f63-105">An `<include>` tag in one of the XML comments refers to a file that does not exist or a file that contains badly formed XML.</span></span>  
   
- <span data-ttu-id="ec1d2-106">**오류 ID:** BC42321</span><span class="sxs-lookup"><span data-stu-id="ec1d2-106">**Error ID:** BC42321</span></span>  
+ <span data-ttu-id="54f63-106">**오류 ID:** BC42321</span><span class="sxs-lookup"><span data-stu-id="54f63-106">**Error ID:** BC42321</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ec1d2-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ec1d2-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="54f63-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="54f63-107">To correct this error</span></span>  
   
-1.  <span data-ttu-id="ec1d2-108">파일이 있는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="ec1d2-108">Verify that the file exists.</span></span>  
+1.  <span data-ttu-id="54f63-108">파일이 있는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="54f63-108">Verify that the file exists.</span></span>  
   
-2.  <span data-ttu-id="ec1d2-109">파일의 XML이 유효한지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="ec1d2-109">Verify that the XML in the file is valid.</span></span>  
+2.  <span data-ttu-id="54f63-109">파일의 XML이 유효한지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="54f63-109">Verify that the XML in the file is valid.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ec1d2-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="ec1d2-110">See also</span></span>
-- [<span data-ttu-id="ec1d2-111">\<include></span><span class="sxs-lookup"><span data-stu-id="ec1d2-111">\<include></span></span>](../../visual-basic/language-reference/xmldoc/include.md)
+## <a name="see-also"></a><span data-ttu-id="54f63-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="54f63-110">See also</span></span>
+- [<span data-ttu-id="54f63-111">\<include></span><span class="sxs-lookup"><span data-stu-id="54f63-111">\<include></span></span>](../../visual-basic/language-reference/xmldoc/include.md)
