commit translated contents

--- a/docs/visual-basic/misc/bc31399.md
+++ b/docs/visual-basic/misc/bc31399.md
@@ -1,5 +1,5 @@
 ---
-title: 클래스&lt;classname&gt;' 없습니다 액세스 가능한 ' Sub ' 있고 상속할 수 없습니다.
+title: 클래스의<classname>' 없습니다 액세스 가능한 ' Sub ' 있고 상속할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31399
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31399
 ms.assetid: 035b333f-ff6a-4fc4-bd36-82f40b1d8bab
-ms.openlocfilehash: 9bbcf41ed2a64fec92a12f6da50e04c85944cd40
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: ed7b1f0e02ef53d34db173ceac57652bb57256ef
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54669265"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55288758"
 ---
-# <a name="class-ltclassnamegt-has-no-accessible-sub-new-and-cannot-be-inherited"></a>클래스&lt;classname&gt;' 없습니다 액세스 가능한 ' Sub ' 있고 상속할 수 없습니다.
+# <a name="class-classname-has-no-accessible-sub-new-and-cannot-be-inherited"></a>클래스의\<응용 프로그램 이름 >'가 없는 액세스 가능한 ' Sub ' 및 상속할 수 없습니다.
 클래스가 [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) 을 사용하여 기본 클래스를 지정하지만 원하는 기본 클래스의 생성자에 액세스할 수 없습니다.  
   
  이 오류는 원하는 기본 클래스에 생성자가 없거나, 다른 클래스에서 액세스할 수 없도록 하는 액세스 수준을 가진 생성자가 있는 경우에 발생할 수 있습니다.  
