commit translated contents

--- a/docs/csharp/misc/cs3002.md
+++ b/docs/csharp/misc/cs3002.md
@@ -6,17 +6,17 @@ f1_keywords:
 helpviewer_keywords:
 - CS3002
 ms.assetid: 34f19735-76d2-4d78-bd52-45989a86fca4
-ms.openlocfilehash: d3f9b2bc01374422cb6f690979ff0e63afabe2ba
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: HT
+ms.openlocfilehash: 54d58afa98a75674972a8357714e6e70afe5a974
+ms.sourcegitcommit: 8f95d3a37e591963ebbb9af6e90686fd5f3b8707
+ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33309928"
+ms.lasthandoff: 02/23/2019
+ms.locfileid: "56800470"
 ---
 # <a name="compiler-warning-level-1-cs3002"></a>컴파일러 경고(수준 1) CS3002
 'method'의 반환 형식이 CLS 규격이 아닙니다.  
   
- A [공용](../../csharp/language-reference/keywords/public.md), [보호](../../csharp/language-reference/keywords/protected.md), 또는 `protected internal` 메서드는 공용 언어 사양 (CLS 규격) 형식의 값을 반환 해야 합니다. CLS 규격에 대한 자세한 내용은 [CLS 규격 코드 작성](http://msdn.microsoft.com/library/4c705105-69a2-4e5e-b24e-0633bc32c7f3) 및 [언어 독립성 및 언어 독립적 구성 요소](../../../docs/standard/language-independence-and-language-independent-components.md)를 참조하세요.  
+  [public](../../csharp/language-reference/keywords/public.md), [protected](../../csharp/language-reference/keywords/protected.md)또는 `protected internal` 메서드는 형식이 CLS(공용 언어 사양) 규격인 값을 반환해야 합니다. CLS 규격에 대 한 자세한 내용은 참조 하세요. [언어 독립성 및 언어 독립적 구성 요소](../../standard/language-independence.md)합니다.
   
 ## <a name="example"></a>예제  
  다음 예제에서는 CS3002를 생성합니다.  
