--- a/docs/csharp/misc/cs0012.md
+++ b/docs/csharp/misc/cs0012.md
@@ -6,17 +6,17 @@ f1_keywords:
 helpviewer_keywords:
 - CS0012
 ms.assetid: 5523e349-22f4-4b0b-b4b0-c4bf26c461f4
-ms.openlocfilehash: 40ebd88a6a750a8a52a4fcd5d40ebeaf7282a809
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: HT
+ms.openlocfilehash: dfdd1127064c06341e930d8ee6edc2661eb1e0b1
+ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33279768"
+ms.lasthandoff: 09/04/2018
+ms.locfileid: "56799055"
 ---
 # <a name="compiler-error-cs0012"></a>컴파일러 오류 CS0012
 'type' 형식이 참조되지 않은 어셈블리에 정의되었습니다. 'assembly' 어셈블리에 참조를 추가해야 합니다.  
   
- 참조된 형식에 대한 정의를 찾을 수 없습니다. 이 오류는 필요한 .DLL 파일이 컴파일에 포함되지 않은 경우 발생할 수 있습니다. 자세한 내용은 참조 [참조 추가 대화 상자](http://msdn.microsoft.com/library/2feb0fe2-0805-4cc9-8cba-b0315849dfb7) 및 [/reference (C# 컴파일러 옵션)](../../csharp/language-reference/compiler-options/reference-compiler-option.md)합니다.  
+ 참조된 형식에 대한 정의를 찾을 수 없습니다. 이 오류는 필요한 .DLL 파일이 컴파일에 포함되지 않은 경우 발생할 수 있습니다. 자세한 내용은 참조 하세요. [참조 추가 대화 상자](/visualstudio/ide/how-to-add-or-remove-references-by-using-the-reference-manager) 하 고 [/reference (C# 컴파일러 옵션)](../../csharp/language-reference/compiler-options/reference-compiler-option.md)합니다.  
   
  다음 컴파일 시퀀스는 CS0012를 생성합니다.  
   
@@ -54,4 +54,4 @@ class C
 }  
 ```  
   
- 사용 하 여 컴파일하면 c s이 0012를 해결할 수 있습니다 `/reference:cs0012b.dll;cs0012a.dll`, 또는 사용 하 여 Visual Studio에서의 [참조 추가 대화 상자](http://msdn.microsoft.com/library/2feb0fe2-0805-4cc9-8cba-b0315849dfb7) cs0012b.dll 외에도 cs0012a.dll에 대 한 참조를 추가 하려면.
+  `/reference:cs0012b.dll;cs0012a.dll`을 사용하여 컴파일하거나 Visual Studio에서 [Add Reference Dialog Box](/visualstudio/ide/how-to-add-or-remove-references-by-using-the-reference-manager) 를 사용하여 cs0012a.dll 및 cs0012b.dll에 대한 참조를 추가하여 CS0012를 해결할 수 있습니다.
